feat: 🎸 rewrite API Platform Book for api-platform/core v3.1

--- a/books/a3800fc0912fbb/10.md
+++ b/books/a3800fc0912fbb/10.md
@@ -1,107 +1,109 @@
 ---
-title: "Item Put/Item PatchオペレーションのAPI DocからLinksを削除する"
+title: "idパラメータのないItemオペレーションを作成する"
 ---
 
-# Item Put/Item PatchオペレーションのAPI Docには常にLinksにItem Getオペレーションへの参照が出力されてしまう
+:::message
+本章はいかにも内容が薄い章となっていますが、これには歴史的な理由があります。
 
-前章で `PUT /api/v1/comments/{id}/ban` オペレーションのAPI Docからリクエストボディを削除して、現状では下図のような状態になっています。
+本書が最初に書かれたときにターゲットとしていたAPI Platform 2.6においては、idパラメータのないItemオペレーションは普通に実装すると意図どおりに動作しない仕様だったのです。
 
-![](https://storage.googleapis.com/zenn-user-upload/25040f0d59c0-20220506.png)
+その仕様を回避し、idパラメータのないItemオペレーションを強引に作成するためのワークアラウンドを紹介するために、もともと本章は書かれました。
 
-ここで、右下の `Links` の箇所に注目してみると、コメントのGet Itemオペレーションへの参照情報が出力されていることが分かります。
+しかしAPI Platform 3.1においては仕様の変更により特別なワークアラウンドは不要となりました。
 
-API Platformでは、Item Put/Item PatchオペレーションのAPI Docには常にLinksにItem Getオペレーションへの参照が出力されるようです。
+本書をAPI Platform 3.1に対応した内容にリライトするにあたり、サンプルアプリの仕様を以前のままとするために、本章の内容は特段の情報量がないまま残されることとなりました。
+:::
 
-しかし、思い出してください。今回、コメントのItem Getオペレーションは **あえて無効化して、API Docからも削除している** 状態です。
+# idパラメータのないItemオペレーションも作成できる
 
-このようなAPIリソースについては、Item Getオペレーションへの参照は自動で出力されてほしくないですね。
+唐突ですが、ここで新たに機能を2つ追加してみたいと思います。
 
-# `OpenApiFactory` をカスタマイズしてLinksを強引に削除する
+現状、投稿のGet/Putオペレーションは、デフォルトのままの設定なので、`GET /api/v1/posts/{id}` `PUT /api/v1/posts/{id}` という定義になっています。
 
-というわけで、ここでも `OpenApiFactory` をカスタマイズしてLinksの項目自体を削除することにします。
+これを、`GET /api/v1/posts/latest` `PUT /api/v1/posts/latest` というオペレーションで、「最も直近に作成された投稿1件」を取得・更新できるという仕様に変更してみましょう。
 
-具体的には、`App\ApiPlatform\OpenApiFactory` に以下のようなコードを追加することで対応可能です。
+> やや微妙な例ですがこれ以上よい例を思いつかなかったのでご容赦ください。実務においては、idパラメータのないItemオペレーションとしては、「ログインユーザーが所有している唯一のリソース（プロフィールなど）を取得・更新する」といったものが想定されるかと思います。
 
-```diff:src/ApiPlatform/OpenApiFactory.php
-  <?php
+まずはオペレーションの定義を修正します。
 
-  declare(strict_types=1);
-
-  namespace App\ApiPlatform;
-
-  use ApiPlatform\Core\OpenApi\Factory\OpenApiFactoryInterface;
-  use ApiPlatform\Core\OpenApi\Model\Operation;
-  use ApiPlatform\Core\OpenApi\Model\Parameter;
-  use ApiPlatform\Core\OpenApi\Model\PathItem;
-+ use ApiPlatform\Core\OpenApi\Model\Response;
-  use ApiPlatform\Core\OpenApi\OpenApi;
-
-  class OpenApiFactory implements OpenApiFactoryInterface
-  {
-      public function __construct(private OpenApiFactoryInterface $decorated)
-      {
-      }
-
-      public function __invoke(array $context = []): OpenApi
-      {
-          $openApi = $this->decorated->__invoke($context);
-
-          /**
-           * @var string   $path
-           * @var PathItem $pathItem
-           */
-          foreach ($openApi->getPaths()->getPaths() as $path => $pathItem) {
-
-              // ...
-+
-+             // remove links in operations which include "#withoutLinks" in description from API Doc
-+             foreach (PathItem::$methods as $method) {
-+                 $getter = 'get'.ucfirst(strtolower($method));
-+                 $setter = 'with'.ucfirst(strtolower($method));
-+                 /** @var Operation|null $operation */
-+                 $operation = $pathItem->$getter();
-+                 if ($operation && preg_match('/#withoutLinks/', $operation->getDescription())) {
-+                     $responses = [];
-+                     /** @var Response $response */
-+                     foreach ($operation->getResponses() as $statusCode => $response) {
-+                         // use reflection because $operation->requestBody cannot be reset to null except in the constructor
-+                         $reflectionProperty = new \ReflectionProperty($response, 'links');
-+                         $reflectionProperty->setAccessible(true);
-+                         $reflectionProperty->setValue($response, null);
-+                         $responses[$statusCode] = $response;
-+                     }
-+                     $description = trim(strval(preg_replace('/#withoutLinks/', '', $operation->getDescription())));
-+                     $openApi->getPaths()->addPath($path, $pathItem = $pathItem->$setter($operation->withDescription($description)->withResponses($responses)));
-+                 }
-+             }
-          }
-
-          return $openApi;
-      }
-  }
+```diff:config/packages/api_platform/Post.yaml
+  resources:
+    App\Entity\Post:
+      routePrefix: /v1
++ 
++     operations:
++ 
++       posts_getCollection:
++         class: ApiPlatform\Metadata\GetCollection
++ 
++       posts_post:
++         class: ApiPlatform\Metadata\Post
++ 
++       posts_getLatest:
++         class: ApiPlatform\Metadata\Get
++         uriTemplate: /posts/latest
++         provider: App\State\Provider\Post\GetLatestProvider
++ 
++       posts_putLatest:
++         class: ApiPlatform\Metadata\Put
++         uriTemplate: /posts/latest
++         provider: App\State\Provider\Post\GetLatestProvider
++ 
++       posts_patch:
++         class: ApiPlatform\Metadata\Patch
++ 
++       posts_delete:
++         class: ApiPlatform\Metadata\Delete
 ```
 
-これで、「`openapi_context` の `description` に `"#withoutLinks"` という文字列を含むオペレーションについてはAPI DocにLinksを出力しない」という処理を付け加えることができました。
+`posts_getLatest` オペレーションと `posts_putLatest` オペレーション以外はデフォルトの定義のまま残しているのみです。
 
-> コードの詳細な解説はここでは割愛します。やや長いですが、それほど難解なコードではないので気になる方は読み解いてみてください。
+次に、対応するState Providerを作成しましょう。
 
-これで準備が整ったので、最後に `Comment` のItem Banオペレーションの `openapi_context.description` に `#withoutLinks` を追記して、`OpenApiFactory` の処理を適用しましょう。
+> 参考のため、公式ドキュメントのリンクを再掲しておきます。
+>
+> [State Providers - API Platform](https://api-platform.com/docs/core/state-providers/)
 
-```diff:config/packages/api_platform/Comment.yaml
-  itemOperations:
+```php:src/State/Provider/Post/GetProvider.php
+<?php
 
-    # ...
+declare(strict_types=1);
 
-    ban:
-      method: put
-      path: /comments/{id}/ban
-      controller: App\Controller\Comment\ItemBanController
-      input: false
-      openapi_context:
--       description: 'Creates a Comment resource. #withoutRequestBody'
-+       description: 'Creates a Comment resource. #withoutRequestBody #withoutLinks'
+namespace App\State\Provider\Post;
+
+use ApiPlatform\Metadata\Operation;
+use ApiPlatform\State\ProviderInterface;
+use App\Entity\Post;
+use App\Repository\PostRepository;
+
+/**
+ * @implements ProviderInterface<Post>
+ */
+class GetLatestProvider implements ProviderInterface
+{
+    public function __construct(private PostRepository $postRepository)
+    {
+    }
+
+    public function provide(Operation $operation, array $uriVariables = [], array $context = []): object|array|null
+    {
+        return $this->postRepository->findOneBy([], ['id' => 'DESC']);
+    }
+}
 ```
 
-これで、下図のとおり `PUT /api/v1/comments/{id}/ban` オペレーションのAPI DocからLinksの項目を削除することができました👍
+このような内容で問題なさそうでしょう。
 
-![](https://storage.googleapis.com/zenn-user-upload/dd421d4b528c-20220506.png)
+「直近の1件」を表す条件として「idが最大のもの」という実装をしていますが、本来であれば [gedmo/doctrine-extensions](https://github.com/doctrine-extensions/DoctrineExtensions) 等を導入してエンティティをTimestampableにし、`createdAt` プロパティを基準にするほうがもちろん望ましいです。今回は簡単のためこのような実装としています。
+
+> また、これはCollection State ProviderではなくItem State Providerなのでページネーションなどの `CollectionExtension` の適用については考える必要がない点にも留意してください。
+
+この状態で `GET /api/v1/posts/latest` `PUT /api/v1/posts/latest` を叩いてみると、期待どおりに動作することが確認できます。
+
+![](https://storage.googleapis.com/zenn-user-upload/6d2b4e6007ef-20220506.png)
+
+![](https://storage.googleapis.com/zenn-user-upload/51ec949b204a-20220506.png)
+
+ちなみに、idパラメータもなく **リクエストボディも必要としない** Item Putオペレーションというのも考えられます。（例えば、ログインユーザーの最終ログイン日時を更新するAPIなど）
+
+このようなオペレーションについては、コメントをBANするオペレーションを実装した際に説明したとおり、[`input: false`](https://api-platform.com/docs/core/dto/#disabling-the-input-or-the-output) を追記してデシリアライズを無効化する必要があるので要注意です。
