--- a/books/a3800fc0912fbb/12.md
+++ b/books/a3800fc0912fbb/12.md
@@ -1,98 +1,88 @@
 ---
-title: "ItemオペレーションのAPI Docからidパラメータを削除する"
+title: "フィルタ機能の使い方"
 ---
 
-# ItemオペレーションのAPI Docからidパラメータを削除する
+# API Platformのフィルタ機能
 
-前章で、idパラメータのないItemオペレーションを作成しましたが、当該オペレーションのAPI Docを見ると、idパラメータが **required** として出力されているままになっています。
+API Platformにはフィルタという機能が組み込みで用意されています。
 
-![](https://storage.googleapis.com/zenn-user-upload/10da59a85764-20220506.png)
+[API Platform: Filters](https://api-platform.com/docs/core/filters/)
 
-ここでも、
+Collectionオペレーションにおいて、結果セットに対して様々な効果を後付けできる機能です。
 
-* Item GetオペレーションをAPI Docからも削除する
-* Item PutオペレーションのAPI Docからリクエストボディを削除する
-* Item Put/Item PatchオペレーションのAPI DocからLinksを削除する
+先に、ページネーションを実装した際に、`CollectionExtension` として `PaginationExtension` の他に `FilterExtension` などもデフォルトで用意されている、と言及しましたが、フィルタ機能は `FilterExtension` 経由でCollectionに適用されるというわけですね。
 
-で行ったのと同様に `OpenApiFactory` をカスタマイズして、API Docからidパラメータを削除する必要があります。
+フィルタは自作することも可能ですが、上記公式ドキュメントに記載されているとおり、デフォルトで様々な実装が用意されています。
 
-具体的には、`App\ApiPlatform\OpenApiFactory` に以下のようなコードを追加することで対応可能です。
+# Search Filterを使ってみる
 
-```diff:src/ApiPlatform/OpenApiFactory.php
-  class OpenApiFactory implements OpenApiFactoryInterface
-  {
-      public function __construct(private OpenApiFactoryInterface $decorated)
-      {
-      }
+デフォルトのフィルタの中でも特によく使うものの1つが [Search Filter](https://api-platform.com/docs/core/filters/#search-filter) です。
 
-      public function __invoke(array $context = []): OpenApi
-      {
-          $openApi = $this->decorated->__invoke($context);
+これは、Collectionをキーワードで検索して絞り込むためのフィルタです。
 
-          /**
-           * @var string   $path
-           * @var PathItem $pathItem
-           */
-          foreach ($openApi->getPaths()->getPaths() as $path => $pathItem) {
+公式ドキュメントの手引きを参考に、実際にSearch Filterを使って投稿を検索する機能を実装してみましょう。
 
-              // ...
-+
-+             // remove id parameter in operations which include "#withoutIdentifier" in description from API Doc
-+             foreach (PathItem::$methods as $method) {
-+                 $getter = 'get'.ucfirst(strtolower($method));
-+                 $setter = 'with'.ucfirst(strtolower($method));
-+                 /** @var Operation|null $operation */
-+                 $operation = $pathItem->$getter();
-+                 if ($operation && preg_match('/#withoutIdentifier/', $operation->getDescription())) {
-+                     /** @var Parameter[] $parameters */
-+                     $parameters = $operation->getParameters();
-+                     foreach ($parameters as $i => $parameter) {
-+                         if (preg_match('/identifier/i', $parameter->getDescription())) {
-+                             unset($parameters[$i]);
-+                             break;
-+                         }
-+                     }
-+                     $description = trim(strval(preg_replace('/#withoutIdentifier/', '', $operation->getDescription())));
-+                     $openApi->getPaths()->addPath($path, $pathItem = $pathItem->$setter($operation->withDescription($description)->withParameters(array_values($parameters))));
-+                 }
-+             }
-          }
+手順はとても簡単で、まず、`config/services.yaml` にフィルタの定義を書きます。
 
-          return $openApi;
-      }
-  }
+```yaml
+services:
+
+    # ...
+
+    post.search_filter:
+        parent: api_platform.doctrine.orm.search_filter
+        arguments:
+            - title: partial
+              body: partial
+        tags: [api_platform.filter]
+        autowire: false
+        autoconfigure: false
 ```
 
-これで、「`openapi_context` の `description` に `"#withoutIdentifier"` という文字列を含むオペレーションについてはAPI Docにidパラメータを出力しない」という処理を付け加えることができました。
+今回は、
 
-> コードの詳細な解説はここでは割愛します。やや長いですが、それほど難解なコードではないので気になる方は読み解いてみてください。
+* `post.search_filter` というサービス名
+* `title` および `body` というプロパティを、いずれも `partial`（部分一致）で検索する
 
-これで準備が整ったので、最後に `Post` のItem Latest/Item PutLatestオペレーションに `openapi_context` を追記して、`OpenApiFactory` の処理を適用しましょう。
+という内容で定義しました。
 
-```diff:config/packages/api_platform/Post.yaml
-  App\Entity\Post:
-    attributes:
-      route_prefix: /v1
+次に、オペレーションの定義にこのフィルタの適用を追記します。
 
-    itemOperations:
-      latest:
-        method: get
-        path: /posts/latest
-        controller: App\Controller\Post\ItemLatestController
-        read: false
-+       openapi_context:
-+         description: 'Retrieves the latest Post resource. #withoutIdentifier'
-      putLatest:
-        method: put
-        path: /posts/latest
-        controller: App\Controller\Post\ItemPutLatestController
-        read: false
-+       openapi_context:
-+         description: 'Replaces the latest Post resource. #withoutIdentifier'
-      patch: ~
-      delete: ~
+```diff
+  resources:
+    App\Entity\Post:
+      routePrefix: /v1
+  
+      operations:
+  
+        posts_getCollection:
+          class: ApiPlatform\Metadata\GetCollection
++         filters:
++           - post.search_filter
+  
+        # ...
 ```
 
-これで、下図のとおり `GET /api/v1/posts/latest` `PUT /api/v1/posts/latest` オペレーションのAPI Docからidパラメータの項目を削除することができました👍
+これだけで完了です。実際に動作させてみましょう。
 
-![](https://storage.googleapis.com/zenn-user-upload/fd6df93f1c48-20220506.png)
+まず、事前に既存のAPIを使って投稿一覧を以下の状態にしておきます。
+
+| id  | title     | body  |
+| --- | --------- | ----- |
+| 1   | タイトル1 | 本文1 |
+| 2   | タイトル2 | 本文2 |
+| 3   | タイトル3 | 本文3 |
+
+その上で、`GET /api/v1/posts?title=タイトル&body=本文` を叩いてみると、
+
+![](https://storage.googleapis.com/zenn-user-upload/e2bcd3590159-20220506.png)
+
+このように3件すべてがヒットします。
+
+では今度は `GET /api/v1/posts?title=タイトル&body=本文1` を叩いてみましょう。
+
+![](https://storage.googleapis.com/zenn-user-upload/56989ede652c-20220506.png)
+
+こちらは1件だけがヒットしました。期待どおりの動作ですね👍
+
+Search Filter以外の組み込みのフィルタを使う場合や、カスタムフィルタを自作する場合も、基本的に同じ要領で対応可能です。
