--- a/books/a3800fc0912fbb/13.md
+++ b/books/a3800fc0912fbb/13.md
@@ -1,232 +1,424 @@
 ---
-title: "URIパラメータを持つCollection Getオペレーションを許容する"
+title: "プロパティのOpenAPI出力を修正する"
 ---
 
-# コメント一覧APIの仕様を変更する
+# 投稿に `#[ORM\Embedded]` なプロパティを追加してみる
 
-現状、コメントの一覧取得APIは、`GET /api/v1/comments` というエンドポイントによって **紐づいている投稿とは無関係に** すべてのコメントを取得する仕様になっています。
+またまた唐突ですが、後続の解説の準備のため、ここで投稿に1つ仕様を追加してみます。
 
-今更ですが、この仕様は自然ではないので、`GET /api/v1/posts/{id}/comments` というエンドポイントによって **指定した投稿の配下のコメントを一覧で取得する** ような仕様に変更したいと思います。
+`Author` という `#[ORM\Embeddable]` なValueObjectクラスを作成し、`Post` に `author` という `#[ORM\Embedded]` なプロパティを追加してみましょう。
 
-まず、オペレーションの定義を以下のように修正しましょう。
+```php:src/Entity/Post/Author.php
+<?php
 
-```diff:config/packages/api_platform/Comment.yaml
-    collectionOperations:
--     get: ~
-+     get:
-+       path: /posts/{id}/comments
+declare(strict_types=1);
+
+namespace App\Entity\Post;
+
+use Doctrine\ORM\Mapping as ORM;
+use Symfony\Component\Validator\Constraints as Assert;
+
+#[ORM\Embeddable]
+class Author
+{
+    #[ORM\Column(type: 'string', length: 255)]
+    #[Assert\NotBlank]
+    private string $name = '';
+
+    #[ORM\Column(type: 'date')]
+    #[Assert\NotBlank]
+    private ?\DateTimeInterface $birthDate = null;
+
+    public function getName(): string
+    {
+        return $this->name;
+    }
+
+    public function setName(string $name): self
+    {
+        $this->name = $name;
+
+        return $this;
+    }
+
+    public function getBirthDate(): ?\DateTimeInterface
+    {
+        return $this->birthDate;
+    }
+
+    public function setBirthDate(\DateTimeInterface $birthDate): self
+    {
+        $this->birthDate = $birthDate;
+
+        return $this;
+    }
+}
 ```
-
-次に、Data Providerを以下のように修正します。URIの `{id}` 箇所を投稿IDと見なして、その投稿に紐づくコメントだけを取得するように修正しています。
 
 ```diff
   <?php
 
   declare(strict_types=1);
 
-  namespace App\DataProvider\Comment;
+  namespace App\Entity;
 
-  use ApiPlatform\Core\DataProvider\ContextAwareCollectionDataProviderInterface;
-  use ApiPlatform\Core\DataProvider\RestrictedDataProviderInterface;
-  use App\DataProvider\AbstractCollectionDataProvider;
-  use App\Entity\Comment;
-  use App\Repository\CommentRepository;
-+ use Symfony\Component\HttpKernel\Exception\NotFoundHttpException;
++ use App\Entity\Post\Author;
+  use App\Repository\PostRepository;
+  use Doctrine\Common\Collections\ArrayCollection;
+  use Doctrine\Common\Collections\Collection;
+  use Doctrine\ORM\Mapping as ORM;
+  use Symfony\Component\Validator\Constraints as Assert;
 
-  /**
-   * @extends AbstractCollectionDataProvider<Comment>
-   */
-  final class CollectionDataProvider extends AbstractCollectionDataProvider implements ContextAwareCollectionDataProviderInterface,   RestrictedDataProviderInterface
+  #[ORM\Entity(repositoryClass: PostRepository::class)]
+  class Post
   {
-      public function __construct(private CommentRepository $commentRepository)
-      {
-      }
+      #[ORM\Id]
+      #[ORM\GeneratedValue]
+      #[ORM\Column(type: 'integer')]
+      private ?int $id = null;
 
-      public function supports(string $resourceClass, string $operationName = null, array $context = []): bool
-      {
-          return Comment::class === $resourceClass;
-      }
+      #[ORM\Column(type: 'string', length: 255)]
+      #[Assert\NotBlank]
+      private string $title = '';
+
+      #[ORM\Column(type: 'text', nullable: true)]
+      private ?string $body = null;
++
++     #[ORM\Embedded(class: Author::class)]
++     #[Assert\Valid]
++     private Author $author;
 
       /**
-       * @return iterable<Comment>
+       * @var Collection<int, Comment>
        */
-      public function getCollection(string $resourceClass, string $operationName = null, array $context = []): iterable
-      {
-+         if (!preg_match('#^/api/v1/posts/(\d+)/comments#', strval($context['request_uri']), $m)) {
-+             throw new NotFoundHttpException();
-+         }
-+
-+         $postId = intval($m[1]);
-+
-          $qb = $this->commentRepository->createQueryBuilder('co')
-+             ->leftJoin('co.post', 'po')
-+             ->andWhere('po.id = :postId')
-              ->andWhere('co.isBanned = false')
-+             ->setParameter('postId', $postId)
-          ;
+      #[ORM\OneToMany(mappedBy: 'post', targetEntity: Comment::class, orphanRemoval: true)]
+      private Collection $comments;
 
-          return $this->getResult($qb, $resourceClass, $operationName, $context);
+      public function __construct()
+      {
++         $this->author = new Author();
+          $this->comments = new ArrayCollection();
       }
+
+      // ...
++
++     public function getAuthor(): Author
++     {
++         return $this->author;
++     }
++
++     public function setAuthor(Author $author): self
++     {
++         $this->author = $author;
++
++         return $this;
++     }
+
+      // ...
   }
 ```
 
-# URIパラメータを持つCollection Getオペレーションを定義することができない問題
+このように修正し、DBをマイグレーションした上で `POST /api/v1/posts` で投稿を作成すると、下図のように動作します。
 
-さて、この状態で `GET /api/v1/posts/1/comments` を叩いてみると、以下のようなエラーが発生します。
+![](https://storage.googleapis.com/zenn-user-upload/7cd3b86953e2-20220506.png)
 
-![](https://storage.googleapis.com/zenn-user-upload/51827e6cff2f-20220506.png)
+期待どおりですね。
 
-実は、API Platformでは、**URIパラメータを持つCollection Getオペレーションを定義することができません**😓
+# プロパティに `openapiContext` を設定する
 
-[`ApiPlatform\Core\Bridge\Symfony\Routing\IriConverter` のこの箇所](https://github.com/api-platform/core/blob/v2.6.8/src/Bridge/Symfony/Routing/IriConverter.php#L137) において、IRIを生成する際にルートパラメータが `[]` とハードコードされているため、URIパラメータを持つCollection Getオペレーションを定義するとコンパイルタイムでエラーになってしまうのです。
+さて、これまでに何度かオペレーションの定義に `openapi`（特に `openapi.description`）を記述してAPI Docの出力内容を制御するということをやってきました。
 
-本来、今回のような「投稿に紐づくコメント」といったリソースの親子関係を扱うユースケースでは、[Subresources](https://api-platform.com/docs/core/subresources/) という機能を使ってオペレーションを定義することが推奨されています。
+同様に、APIリソースのプロパティに対しても `openapi` を定義することが可能です。
 
-が、実際に使い込んでみると分かりますが、Subresourcesは2022年5月時点でまだまだバギーなところも多く、仕様的にも痒いところに手が届かず扱いづらいものになっているため、正直なところあまり使いたくないというのが筆者の現時点の感想です。
+ただし、ややこしいことに **プロパティに対する設定においてはYAMLで書く場合も `openapi` ではなく `openapiContext` というキーで定義します。**
 
-また、リソースの親子関係というユースケース以外でも、URIパラメータを持つCollection Getオペレーションを定義したくなる場面は十分にあり得そうです。
+試しに `Post` `Comment` の各プロパティに `openapiContext.description` を定義してみましょう。
 
-なので、多少強引な方法を使ってでも、URIパラメータを持つCollection Getオペレーションを許容できるようにしたいというニーズは大きいと考えます。
+書き方は以下のとおりです。
 
-# `IriConverter` をカスタマイズして強引に許容する
-
-このエラーは、問題となっている `IriConverter` を拡張して、特定のオペレーションについてはIRIの生成時に手動でルートパラメータをセットするようなコードを追記することで回避することが可能です。
-
-> `IriConverter` の拡張については以下のStack OverflowやGitHub Issueにも多少の問答が見られました。
->
-> * [php - Custom collection operation and IRI conversion problem - Stack Overflow](https://stackoverflow.com/questions/58040770/custom-collection-operation-and-iri-conversion-problem)
-> * [Custom IriConverter · Issue #250 · api-platform/api-platform](https://github.com/api-platform/api-platform/issues/250)
-
-具体的には、`OpenApiFactory` を拡張したときと同様に、Symfonyの [サービスデコレート機能](https://symfony.com/doc/current/service_container/service_decoration.html) を使って `ApiPlatform\Core\Bridge\Symfony\Routing\IriConverter` を以下のように独自クラスでデコレートします。
-
-```php:src/ApiPlatform/IriConverter.php
-<?php
-
-declare(strict_types=1);
-
-namespace App\ApiPlatform;
-
-use ApiPlatform\Core\Api\IriConverterInterface;
-use ApiPlatform\Core\Api\OperationType;
-use ApiPlatform\Core\Api\UrlGeneratorInterface;
-use ApiPlatform\Core\Bridge\Symfony\Routing\RouteNameResolverInterface;
-use App\Entity\Comment;
-use Symfony\Component\HttpFoundation\RequestStack;
-use Symfony\Component\Routing\RouterInterface;
-
-/**
- * @see \ApiPlatform\Core\Bridge\Symfony\Routing\IriConverter
- */
-class IriConverter implements IriConverterInterface
-{
-    public function __construct(
-        private \ApiPlatform\Core\Bridge\Symfony\Routing\IriConverter $decorated,
-        private RouteNameResolverInterface $routeNameResolver,
-        private RouterInterface $router,
-        private RequestStack $requestStack,
-    ) {
-    }
-
-    public function getItemFromIri(string $iri, array $context = []): object
-    {
-        return $this->decorated->getItemFromIri($iri, $context);
-    }
-
-    public function getIriFromItem($item, int $referenceType = UrlGeneratorInterface::ABS_PATH): string
-    {
-        return $this->decorated->getIriFromItem($item, $referenceType);
-    }
-
-    public function getIriFromResourceClass(string $resourceClass, int $referenceType = UrlGeneratorInterface::ABS_PATH): string
-    {
-        // customize this process to enable to declare Collection Get operations with URI parameters
-        $iri = $this->getIriWithRouteParametersFromResourceClass($resourceClass, $referenceType);
-
-        return $iri ?? $this->decorated->getIriFromResourceClass($resourceClass, $referenceType);
-    }
-
-    public function getItemIriFromResourceClass(string $resourceClass, array $identifiers, int $referenceType = UrlGeneratorInterface::ABS_PATH): string
-    {
-        return $this->decorated->getItemIriFromResourceClass($resourceClass, $identifiers, $referenceType);
-    }
-
-    public function getSubresourceIriFromResourceClass(string $resourceClass, array $identifiers, int $referenceType = UrlGeneratorInterface::ABS_PATH): string
-    {
-        return $this->decorated->getSubresourceIriFromResourceClass($resourceClass, $identifiers, $referenceType);
-    }
-
-    private function getIriWithRouteParametersFromResourceClass(string $resourceClass, int $referenceType = UrlGeneratorInterface::ABS_PATH): string|null
-    {
-        if (Comment::class === $resourceClass) {
-            $requestUri = $this->requestStack->getCurrentRequest()?->getRequestUri() ?? '';
-            preg_match('#^/api/v1/posts/(\d+)/comments#', $requestUri, $m);
-            $postId = intval($m[1]);
-
-            return $this->router->generate($this->routeNameResolver->getRouteName($resourceClass, OperationType::COLLECTION), [
-                'id' => $postId,
-            ], $referenceType);
-        }
-
-        return null;
-    }
-}
-```
-
-拡張しているのは今回エラー箇所となっている `getIriFromResourceClass()` メソッドのみで、他のメソッドはすべて元クラスの同メソッドを呼んでいるだけです。
-
-`getIriFromResourceClass()` メソッドでのみ、元クラスの同メソッドを呼ぶ前に、`getIriWithRouteParametersFromResourceClass()` というprivateメソッドでIRIの生成を試みるようにしており、`getIriWithRouteParametersFromResourceClass()` メソッドでは、特定のリソースにおいてのみ、リクエストURIからルートパラメータに該当する箇所の文字列を抜き出し、これをルートパラメータとして手動でIRIを生成するという処理を行っています。
-
-`getIriWithRouteParametersFromResourceClass()` から `null` が返された場合は元クラスの同メソッドが単に呼ばれるので、指定したリソース以外の場合にはもともとの挙動となり、害はありません。
-
-上記のように実装した独自サービスを、以下のように `config/services.yaml` で `ApiPlatform\Core\Bridge\Symfony\Routing\IriConverter` のデコレータとして登録します。
-
-```yaml:config/services.yaml
-services:
-
-    # ...
-
-    App\ApiPlatform\IriConverter:
-        decorates: api_platform.iri_converter
-        arguments:
-            $routeNameResolver: '@api_platform.route_name_resolver'
-```
-
-これで、下図のとおり、URIパラメータを持つCollection Getオペレーションが動作するようになりました👍
-
-![](https://storage.googleapis.com/zenn-user-upload/44ae276dbb24-20220506.png)
-
-# API DocにURIパラメータを出力する
-
-前節までで `GET /api/v1/posts/{id}/comments` オペレーションが正常に動作するようにはなりましたが、API Docをよく見てみるとパラメータの項目に `page` というページネーション用のパラメータだけしか出力されておらず、必須であるはずのURIパラメータ `id` がありません。
-
-![](https://storage.googleapis.com/zenn-user-upload/f1434d5776fd-20220506.png)
-
-これについても、手動でAPI Docに出力してあげる必要があります。
-
-これまでに何度か書いてきたように、オペレーションの `openapi_context` で [`parameter`](https://swagger.io/specification/#parameter-object) を明示的に定義することで対応します。
-
-具体的には、以下のようなコードが必要になります。
-
-```diff:config/packages/api_platform/Comment.yaml
-  App\Entity\Comment:
-    attributes:
-      route_prefix: /v1
-
-    collectionOperations:
-      get:
-        path: /posts/{id}/comments
-+       openapi_context:
-+         parameters:
-+           - in: path
-+             name: id
-+             schema:
-+               type: integer
-+             required: true
-+             description: 投稿ID
-
+```diff:config/packages/api_platform/Post.yaml
++ properties:
++   App\Entity\Post:
++     title:
++       openapiContext:
++         description: 投稿のタイトル
++     body:
++       openapiContext:
++         description: 投稿の本文
++     comments:
++       openapiContext:
++         description: 投稿に対するコメント
++ 
+  resources:
+    App\Entity\Post:
       # ...
 ```
 
-これで、下図のとおりAPI DocにURIパラメータが必須として出力されました👌
+```diff:config/packages/api_platform/Comment.yaml
++ properties:
++   App\Entity\Comment:
++     post:
++       openapiContext:
++         description: コメント先の投稿
++     body:
++       openapiContext:
++         description: コメントの本文
++     isBanned:
++       openapiContext:
++         description: BANされているかどうか
++ 
+  resources:
+    App\Entity\Comment:
+      # ...
+```
 
-![](https://storage.googleapis.com/zenn-user-upload/e05a36fd166f-20220506.png)
+このように `properties.{リソースクラス名}.{プロパティ名}` の下に `openapiContext` の定義を書きます。
+
+書き方については [公式ドキュメントのこの辺り](https://api-platform.com/docs/core/openapi/#using-the-openapi-and-swagger-contexts) で言及されています。
+
+> 2023年9月現在、ドキュメントの内容が誤っているのでご注意ください。ドキュメントでは `properties.{リソースクラス名}.attributes.{プロパティ名}.openapiContext` というパスで設定していますが、この `attributes` は実際には不要です。
+
+これで、下図のようにAPI Docにおいて各プロパティにdescriptionが出力されます。
+
+![](https://storage.googleapis.com/zenn-user-upload/c420dfa3521b-20220506.png)
+
+![](https://storage.googleapis.com/zenn-user-upload/e42cbb43c694-20220506.png)
+
+# `#[ORM\Embedded]` なプロパティの `openapi`
+
+先ほど `Post` の各プロパティに以下のように `openapiContext` を設定しましたが、
+
+```diff:config/packages/api_platform/Post.yaml
++ properties:
++   App\Entity\Post:
++     title:
++       openapiContext:
++         description: 投稿のタイトル
++     body:
++       openapiContext:
++         description: 投稿の本文
++     comments:
++       openapiContext:
++         description: 投稿に対するコメント
++ 
+  resources:
+    App\Entity\Post:
+      # ...
+```
+
+`Post` にはもう1つ `author` という `#[ORM\Embedded]` なプロパティがあり、その内部に `author.name` `author.birthDate` という末端のプロパティがありますよね。
+
+これらのプロパティの `openapiContext` を定義するにはどうすればよいのでしょうか？
+
+正解はこうです。
+
+```diff:config/packages/api_platform/Post.yaml
+  properties:
+    App\Entity\Post:
+      title:
+        openapiContext:
+          description: 投稿のタイトル
+      body:
+        openapiContext:
+          description: 投稿の本文
+      comments:
+        openapiContext:
+          description: 投稿に対するコメント
++ 
++   App\Entity\Post\Author:
++     name:
++       openapiContext:
++         description: 投稿者の名前
++     birthDate:
++       openapiContext:
++         description: 投稿者の生年月日
+  
+  resources:
+    App\Entity\Post:
+      # ...
+```
+
+これで、下図のように `author.name` `author.birthDate` にもdescriptionが出力されました。
+
+![](https://storage.googleapis.com/zenn-user-upload/02b972ba23b0-20220506.png)
+
+# `author.birthDate` のOpenAPIにおけるフォーマットを `date` に変更する
+
+ここで、`GET /api/v1/posts/latest` 等のAPI Docを改めてよく見てみると、下図のように `author.birthDate` のフォーマットが `date-time` になっていることが分かります。
+
+![](https://storage.googleapis.com/zenn-user-upload/bcec1a43e340-20220506.png)
+
+API Platformでは、PHPクラスのプロパティの型から自動でOpenAPIのプロパティの型（およびstring型の場合はフォーマット）を設定してくれます。
+
+`Author::$birthDate` は型が `\DateTimeInterface` なので、そこから類推してOpenAPIのプロパティの型も自動で `string ($date-time)` と定義されているというわけですね。
+
+しかし、`Author::$birthDate` は `\DateTimeInterface` 型ではありますが、意図している用途としては時刻に関知しない「日付」としてのプロパティであり、DBAL Typeも `'date'` を使用しています。
+
+なので、API Docに実装の意図を正しく反映するなら、フォーマットは `date-time` ではなく [`date`](https://swagger.io/specification/#:~:text=boolean-,string,As%20defined%20by%20full%2Ddate%20%2D%20RFC3339,-string) となっているべきです。
+
+このような場合、プロパティの `openapiContext` でフォーマットを明示的に指定することが可能です。
+
+```diff:config/packages/api_platform/Post.yaml
+  properties:
+    App\Entity\Post:
+      title:
+        openapiContext:
+          description: 投稿のタイトル
+      body:
+        openapiContext:
+          description: 投稿の本文
+      comments:
+        openapiContext:
+          description: 投稿に対するコメント
+  
+    App\Entity\Post\Author:
+      name:
+        openapiContext:
+          description: 投稿者の名前
+      birthDate:
+        openapiContext:
+          description: 投稿者の生年月日
++         format: date
+  
+  resources:
+    App\Entity\Post:
+      # ...
+```
+
+これで、下図のとおりフォーマットを `date` に変更することができました👍
+
+![](https://storage.googleapis.com/zenn-user-upload/3eabd25417ec-20220506.png)
+
+# プロパティのdescriptionにはDocコメントが自動で反映される
+
+ちなみに、プロパティのdescriptionはわざわざ `openapiContext.description` に書かずとも、以下のようにクラス内にDocコメントを書けばそれが自動で反映されます。個人的にはこちらのほうがコードの可読性も上がって一石二鳥なのでおすすめです。
+
+```diff:config/packages/api_platform/Post.yaml
+  properties:
+-   App\Entity\Post:
+-     title:
+-       openapiContext:
+-         description: 投稿のタイトル
+-     body:
+-       openapiContext:
+-         description: 投稿の本文
+-     comments:
+-       openapiContext:
+-         description: 投稿に対するコメント
+- 
+    App\Entity\Post\Author:
+-     name:
+-       openapiContext:
+-         description: 投稿者の名前
+      birthDate:
+        openapiContext:
+-         description: 投稿者の生年月日
+         format: date
+  
+  resources:
+    App\Entity\Post:
+      # ...
+```
+
+```diff:config/packages/api_platform/Comment.yaml
+- properties:
+-   App\Entity\Comment:
+-     post:
+-       openapiContext:
+-         description: コメント先の投稿
+-     body:
+-       openapiContext:
+-         description: コメントの本文
+-     isBanned:
+-       openapiContext:
+-         description: BANされているかどうか
+- 
+  resources:
+    App\Entity\Comment:
+      # ...
+```
+
+```diff:src/Entity/Post.php
++ /**
++  * 投稿のタイトル
++  */
+  #[ORM\Column(type: 'string', length: 255)]
+  #[Assert\NotBlank]
+  private string $title = '';
+
++ /**
++  * 投稿の本文
++  */
+  #[ORM\Column(type: 'text', nullable: true)]
+  private ?string $body = null;
+
+  #[ORM\Embedded(class: Author::class)]
+  #[Assert\Valid]
+  private Author $author;
+
+  /**
++  * 投稿に対するコメント
++  *
+   * @var Collection<int, Comment>
+   */
+  #[ORM\OneToMany(mappedBy: 'post', targetEntity: Comment::class, orphanRemoval: true)]
+  private Collection $comments;
+```
+
+```diff:src/Entity/Post/Author.php
++ /**
++  * 投稿者の名前
++  */
+  #[ORM\Column(type: 'string', length: 255)]
+  #[Assert\NotBlank]
+  private string $name = '';
+
++ /**
++  * 投稿者の生年月日
++  */
+  #[ORM\Column(type: 'date')]
+  #[Assert\NotBlank]
+  private ?\DateTimeInterface $birthDate = null;
+```
+
+```diff:src/Entity/Comment.php
++ /**
++  * コメント先の投稿
++  */
+  #[ORM\ManyToOne(targetEntity: Post::class, inversedBy: 'comments')]
+  #[ORM\JoinColumn(nullable: false)]
+  #[Assert\NotBlank]
+  private ?Post $post = null;
+
++ /**
++  * コメントの本文
++  */
+  #[ORM\Column(type: 'text')]
+  #[Assert\NotBlank]
+  private string $body = '';
+
++ /**
++  * BANされているかどうか
++  */
+  #[ORM\Column(type: 'boolean')]
+  private bool $isBanned = false;
+```
+
+上記のように修正しても、出力されるAPI Docはまったく変わりません👌
+
+プロパティに対する `openapiContext` の設定方法については、以下の公式ドキュメント、
+
+[OpenAPI Specification Support (formerly Swagger) - API Platform `#using-the-openapi-and-swagger-contexts`](https://api-platform.com/docs/core/openapi/#using-the-openapi-and-swagger-contexts)
+
+およびOpenAPIの仕様
+
+[OpenAPI Specification - Version 3.0.3 | Swagger](https://swagger.io/specification/)
+
+を参照してください。
+
+> ちなみのちなみに、本章ではプロパティのOpenAPI出力設定をYAMLで書く方法をご紹介しましたが、実は筆者は現時点では様々な理由から
+> 
+> * リソース定義はすべてYAMLに寄せる
+> * プロパティ定義はすべてアトリビュートに寄せる
+> 
+> という棲み分けで書くようにしています。「様々な理由」の詳細は割愛します（というか試行錯誤の末にそうなったので、途中でどんな理由があったのか細かいことは忘れてしまいました🙄）が、ご参考までに。
