--- a/books/a3800fc0912fbb/14.md
+++ b/books/a3800fc0912fbb/14.md
@@ -1,256 +1,107 @@
 ---
-title: "フィルタ機能の使い方とPostgreSQL特有の問題"
+title: "URIパスをlowerCamelCaseに変更する"
 ---
 
-# API Platformのフィルタ機能
+# URIパスはsnake_case
 
-API Platformにはフィルタという機能が組み込みで用意されています。
+さて、そろそろ本書も締めくくりが近づいてきました。
 
-[API Platform: Filters](https://api-platform.com/docs/core/filters/)
+最後におまけでもう1つ、多くの場合に実装することになるであろう対応について解説しておきます。
 
-Collectionオペレーションにおいて、結果セットに対して様々な効果を後付けできる機能です。
+API Platformが自動で作成してくれるエンドポイントのURIパスは、デフォルトで **snake_case** となります。
 
-先に、ページネーションを実装した際に、`CollectionExtension` として `PaginationExtension` の他に `FilterExtension` などもデフォルトで用意されている、と言及しましたが、フィルタ機能は `FilterExtension` 経由でCollectionに適用されるというわけですね。
+試しに実験してみましょう。
 
-フィルタは自作することも可能ですが、上記公式ドキュメントに記載されているとおり、デフォルトで様々な実装が用意されています。
+```php:src/Entity/SampleResource.php
+<?php
 
-# Serch Filterを使ってみる
+declare(strict_types=1);
 
-デフォルトのフィルタの中でも特によく使うものの1つが [Serch Filter](https://api-platform.com/docs/core/filters/#search-filter) です。
+namespace App\Entity;
 
-これは、Collectionをキーワードで検索して絞り込むためのフィルタです。
+class SampleResource
+{
+    public int $id;
+}
+```
 
-公式ドキュメントの手引きを参考に、実際にSerch Filterを使って投稿を検索する機能を実装してみましょう。
+このようなクラスを作って、
 
-手順はとても簡単で、まず、`config/services.yaml` にフィルタの定義を書きます。
+```yaml:config/packages/api_platform/SampleResource.yaml
+resources:
+  App\Entity\SampleResource:
+    routePrefix: /v1
+```
+
+このようにAPIリソースとして定義します。
+
+この状態でAPI Docを見てみると、
+
+![](https://storage.googleapis.com/zenn-user-upload/feca2ffccdd1-20220506.png)
+
+このように、確かにURIパスはsnake_caseになっています。
+
+# プロパティ名はlowerCamelCase
+
+しかしながら、これまで見てきたように、リクエスト/レスポンスデータのプロパティ名はPHPクラスのプロパティ名がそのまま使われるため **lowerCamelCase** となっていました。
+
+個人的には、このギャップについての認知負荷は無駄なので、どちらかに統一するのが好ましいと考えます。
+
+# URIパスをlowerCamelCaseに変更する
+
+プロパティ名の命名規則はコーディング規約の制約もあって変えにくいので、ここでは **URIパスのほうをlowerCamelCaseに変更する** ことにしましょう。
+
+URIパスの命名規則の変更方法は以下の公式ドキュメントに説明されています。
+
+[Operation Path Naming - API Platform](https://api-platform.com/docs/core/operation-path-naming/)
+
+これを参考に、以下のような `LowerCamelCasePathSegmentNameGenerator` クラスを実装しましょう。
+
+```php:src/ApiPlatform/LowerCamelCasePathSegmentNameGenerator.php
+<?php
+
+declare(strict_types=1);
+
+namespace App\ApiPlatform;
+
+use ApiPlatform\Core\Operation\PathSegmentNameGeneratorInterface;
+use ApiPlatform\Core\Util\Inflector;
+
+class LowerCamelCasePathSegmentNameGenerator implements PathSegmentNameGeneratorInterface
+{
+    public function getSegmentName(string $name, bool $collection = true): string
+    {
+        $name = lcfirst($name);
+
+        return $collection ? Inflector::pluralize($name) : $name;
+    }
+}
+```
+
+> `ApiPlatform\Core\Util\Inflector` は `@internal` マークされているクラスなので外部から利用するのはマナー違反ですが、自前で実装するのが面倒だったのでお許しください…
+
+これを、`config/services.yaml` で以下のようにサービスとして定義し、
 
 ```yaml
 services:
-
-    # ...
-
-    post.search_filter:
-        parent: api_platform.doctrine.orm.search_filter
-        arguments:
-            - title: partial
-              body: partial
-        tags: [api_platform.filter]
-        autowire: false
-        autoconfigure: false
+    App\ApiPlatform\LowerCamelCasePathSegmentNameGenerator: ~
 ```
 
-今回は、
-
-* `post.search_filter` というサービス名
-* `title` および `body` というプロパティを、いずれも `partial`（部分一致）で検索する
-
-という内容で定義しました。
-
-次に、オペレーションの定義にこのフィルタの適用を追記します。
+最後に `config/packages/api_platform.yaml` で以下のように上記サービスを使用するよう設定すれば完了です。
 
 ```diff
-  App\Entity\Post:
-    attributes:
-      route_prefix: /v1
-+
-+   collectionOperations:
-+     get:
-+       filters:
-+         - post.search_filter
-+     post: ~
-
-    itemOperations:
-      latest:
-        method: get
-        path: /posts/latest
-        controller: App\Controller\Post\ItemLatestController
-        read: false
-        openapi_context:
-          description: 'Retrieves the latest Post resource. #withoutIdentifier'
-      putLatest:
-        method: put
-        path: /posts/latest
-        controller: App\Controller\Post\ItemPutLatestController
-        read: false
-        openapi_context:
-          description: 'Replaces the latest Post resource. #withoutIdentifier'
-      patch: ~
-      delete: ~
+  api_platform:
+      mapping:
+          paths:
+              - '%kernel.project_dir%/src/Entity'
+              - '%kernel.project_dir%/config/packages/api_platform'
+      patch_formats:
+          json: ['application/merge-patch+json']
+      swagger:
+          versions: [3]
++     path_segment_name_generator: App\ApiPlatform\LowerCamelCasePathSegmentNameGenerator
 ```
 
-これだけで完了です。実際に動作させてみましょう。
+この状態で再度API Docを見てみると、下図のとおりlowerCamelCaseに変更できていることが確認できます👌
 
-まず、事前に既存のAPIを使って投稿一覧を以下の状態にしておきます。
-
-| id  | title     | body  |
-| --- | --------- | ----- |
-| 1   | タイトル1 | 本文1 |
-| 2   | タイトル2 | 本文2 |
-| 3   | タイトル3 | 本文3 |
-
-その上で、`GET /api/v1/posts?title=タイトル&body=本文` を叩いてみると、
-
-![](https://storage.googleapis.com/zenn-user-upload/e2bcd3590159-20220506.png)
-
-このように3件すべてがヒットします。
-
-では今度は `GET /api/v1/posts?title=タイトル&body=本文1` を叩いてみましょう。
-
-![](https://storage.googleapis.com/zenn-user-upload/56989ede652c-20220506.png)
-
-こちらは1件だけがヒットしました。期待どおりの動作ですね👍
-
-Search Filter以外の組み込みのフィルタを使う場合や、カスタムフィルタを自作する場合も、基本的に同じ要領で対応可能です。
-
-# PostgreSQLにおいてJSON型カラムをSearch Filterで検索できない問題
-
-フィルタに関連して一点特筆すべき問題とその対処を解説しておきます。
-
-本書のサンプルコードはSQLiteベースで実装しているので実例を示すことができませんが、**DBにPostgreSQLを採用している場合に、JSON型のカラムをSearch Filterで検索しようとすると、DBレイヤーでエラーとなり正常に動作しません。**
-
-これは、[Search Filterの実装](https://github.com/api-platform/core/blob/v2.6.8/src/Bridge/Doctrine/Orm/Filter/SearchFilter.php#L189-L221) が、指定されたカラムをLIKE句で検索するようになっており、PostgreSQLではJSON型カラムに対してLIKE句で検索することができないために起こる問題です。
-
-DBの仕様だからしょうがないと言ってしまえばそれまでですが、ハッシュマップでない単なるスカラー値の配列であるようなプロパティをJSON DBAL TypeでマッピングするのはDoctrine ORMにおいて常套手段です。（例えば `make` コマンドでSecurityコンポーネントの `User` クラスを自動生成すると、`$roles` プロパティのDBAL TypeはJSONになっています）
-
-そこで、これもやや強引な方法ではありますが回避策を示しておきます。
-
-まず、PostgreSQL用の `json_to_text` という [DQLユーザー定義関数](https://www.doctrine-project.org/projects/doctrine-orm/en/2.11/cookbook/dql-user-defined-functions.html) を以下のように実装・有効化します。
-
-> 以下のStack Overflowなどが参考になりました。
->
-> [php - Symfony find user by role (JSON array Doctrine property) - Stack Overflow `#answer-70244617`](https://stackoverflow.com/questions/67725384/symfony-find-user-by-role-json-array-doctrine-property#answer-70244617)
-
-```php:src/Doctrine/Extension/Postgresql/JsonToText.php
-<?php
-
-declare(strict_types=1);
-
-namespace App\Doctrine\Extension\Postgresql;
-
-use Doctrine\ORM\Query\AST\Functions\FunctionNode;
-use Doctrine\ORM\Query\AST\Node;
-use Doctrine\ORM\Query\Lexer;
-use Doctrine\ORM\Query\Parser;
-use Doctrine\ORM\Query\SqlWalker;
-
-class JsonToText extends FunctionNode
-{
-    private Node $value;
-
-    public function parse(Parser $parser)
-    {
-        $parser->match(Lexer::T_IDENTIFIER);
-        $parser->match(Lexer::T_OPEN_PARENTHESIS);
-        $this->value = $parser->StringPrimary();
-        $parser->match(Lexer::T_CLOSE_PARENTHESIS);
-    }
-
-    public function getSql(SqlWalker $sqlWalker)
-    {
-        return sprintf('CAST(%s AS TEXT)', $this->value->dispatch($sqlWalker));
-    }
-}
-```
-
-```yaml:config/packages/doctrine.yaml
-doctrine:
-    orm:
-        dql:
-            string_functions:
-                json_to_text: App\Doctrine\Extension\Postgresql\JsonToText
-```
-
-そして、この `json_to_text` 関数を使用してJSON型カラムをLIKE句で検索するための独自フィルタを以下のように実装します。
-
-```php:src/Filter/JsonSearchFilter.php
-<?php
-
-declare(strict_types=1);
-
-namespace App\Filter;
-
-use ApiPlatform\Core\Bridge\Doctrine\Orm\Filter\SearchFilter;
-use ApiPlatform\Core\Bridge\Doctrine\Orm\Util\QueryNameGeneratorInterface;
-use ApiPlatform\Core\Exception\InvalidArgumentException;
-use Doctrine\ORM\QueryBuilder;
-
-class JsonSearchFilter extends SearchFilter
-{
-    /**
-     * @see SearchFilter::addWhereByStrategy()
-     *
-     * Almost copy-and-pasted from original method, but modified only
-     *  - disable strategies except "partial"
-     *  - cast value with json_to_text
-     */
-    protected function addWhereByStrategy(string $strategy, QueryBuilder $queryBuilder, QueryNameGeneratorInterface $queryNameGenerator, string $alias, string $field, mixed $values, bool $caseSensitive): void
-    {
-        if (!\is_array($values)) {
-            $values = [$values];
-        }
-
-        $wrapCase = $this->createWrapCase($caseSensitive);
-        $valueParameter = ':'.$queryNameGenerator->generateParameterName($field);
-        $aliasedField = sprintf('%s.%s', $alias, $field);
-
-        if (!$strategy || self::STRATEGY_EXACT === $strategy) {
-            if (1 === \count($values)) {
-                $queryBuilder
-                    ->andWhere($queryBuilder->expr()->eq($wrapCase($aliasedField), $wrapCase($valueParameter)))
-                    ->setParameter($valueParameter, $values[0]);
-
-                return;
-            }
-
-            $queryBuilder
-                ->andWhere($queryBuilder->expr()->in($wrapCase($aliasedField), $valueParameter))
-                ->setParameter($valueParameter, $caseSensitive ? $values : array_map('strtolower', $values));
-
-            return;
-        }
-
-        $ors = [];
-        $parameters = [];
-        foreach ($values as $key => $value) {
-            $keyValueParameter = sprintf('%s_%s', $valueParameter, $key);
-            $parameters[$caseSensitive ? $value : strtolower($value)] = $keyValueParameter;
-
-            // here is only modified
-            switch ($strategy) {
-                case self::STRATEGY_PARTIAL:
-                    $ors[] = $queryBuilder->expr()->like(
-                        $wrapCase(sprintf('json_to_text(%s)', $aliasedField)),
-                        $wrapCase((string) $queryBuilder->expr()->concat("'%'", $keyValueParameter, "'%'"))
-                    );
-                    break;
-                default:
-                    throw new InvalidArgumentException(sprintf('strategy %s does not exist.', $strategy));
-            }
-        }
-
-        $queryBuilder->andWhere($queryBuilder->expr()->orX(...$ors));
-        array_walk($parameters, [$queryBuilder, 'setParameter']);
-    }
-}
-```
-
-組み込みの `SearchFilter` を継承して、LIKE句の組み立てを行っているメソッドのみ上書きしています。
-
-内容はほとんど元メソッドのコピペで、LIKE句の組み立てに関する箇所のみ、
-
-* `partial` 以外の戦略を非対応に
-* 対象フィールドを `json_to_text` でキャストするように
-
-という2点の変更を加えています。
-
-あとは、通常のフィルタを使用するのと同様の手順で、JSON型カラムに対してはこの `JsonSearchFilter` を使用するようにすればよいだけです。
-
-例えば `Post` クラスに `tags` というJSON型のプロパティがあるとしたら、以下のような設定になるでしょう。
-
-```yaml:config/services.yaml
-post.json_search_filter:
-    class: App\Filter\JsonSearchFilter
-    arguments:
-        $properties:
-            tags: partial
-```
+![](https://storage.googleapis.com/zenn-user-upload/30db2b38d062-20220506.png)
