--- a/books/a3800fc0912fbb/15.md
+++ b/books/a3800fc0912fbb/15.md
@@ -1,501 +1,196 @@
 ---
-title: "#[ORM\\Embedded]なプロパティがある場合の注意点"
+title: "シリアライズの設定を行う"
 ---
 
-# 投稿に `#[ORM\Embedded]` なプロパティを追加してみる
+# シリアライズ/デシリアライズについて
 
-またまた唐突ですが、ここで投稿に1つ仕様を追加してみます。
+API Platformでは、リソースのシリアライズ/デシリアライズを（通常のSymfonyアプリと同様）[Symfony Serializer](https://symfony.com/doc/current/components/serializer.html) によって行います。
 
-`Author` という `#[ORM\Embeddable]` なValueObjectクラスを作成し、`Post` に `author` という `#[ORM\Embedded]` なプロパティを追加してみましょう。
+シリアライズのプロセスについては以下の公式ドキュメントにほぼすべて必要な情報が網羅されています。
 
-```php:src/Entity/Post/Author.php
-<?php
+[The Serialization Process - API Platform](https://api-platform.com/docs/core/serialization/)
 
-declare(strict_types=1);
+シリアライズの細かな設定方法については上記ドキュメントを読めば十分であることと、これはAPI Platform固有の話というよりSymfony Serializerの話になってしまうため、本書ではおまけ程度の簡単な解説に留めさせていただきます。
 
-namespace App\Entity\Post;
+# シリアライズの設定をYAMLで行う
 
-use Doctrine\ORM\Mapping as ORM;
-use Symfony\Component\Validator\Constraints as Assert;
+まず初めに、シリアライズの設定（≒Serialization Groupの設定）は `#[Groups]` アトリビュートで行うのではなく **YAMLで行うのが個人的にはおすすめです。**
 
-#[ORM\Embeddable]
-class Author
-{
-    #[ORM\Column(type: 'string', length: 255)]
-    #[Assert\NotBlank]
-    private string $name = '';
+ある程度の規模のアプリになると、Serialization Groupの数は結構な数になり、あるエンティティのあるプロパティに7〜8個ものSerialization Groupが設定されるようなこともざらに起こります。
 
-    #[ORM\Column(type: 'date')]
-    #[Assert\NotBlank]
-    private ?\DateTimeInterface $birthDate = null;
+このような状況では、エンティティのプロパティにアトリビュートで設定されているよりも **YAMLファイルにまとめて記述されているほうが圧倒的に可読性が高まります。**
 
-    public function getName(): string
-    {
-        return $this->name;
-    }
+シリアライズの設定をYAMLで行う場合は、[公式ドキュメントのこの部分](https://api-platform.com/docs/core/serialization/#using-serialization-groups) に記載があるとおり、`config/packages/framework.yaml` で以下のように設定する必要があります。
 
-    public function setName(string $name): self
-    {
-        $this->name = $name;
-
-        return $this;
-    }
-
-    public function getBirthDate(): ?\DateTimeInterface
-    {
-        return $this->birthDate;
-    }
-
-    public function setBirthDate(\DateTimeInterface $birthDate): self
-    {
-        $this->birthDate = $birthDate;
-
-        return $this;
-    }
-}
+```yaml
+framework:
+    serializer:
+        mapping:
+            paths: ['%kernel.project_dir%/config/packages/serializer']
 ```
 
-```diff
-  <?php
+その上で、`config/packages/serializer/Post.yaml` や `config/packages/serializer/Comment.yaml` といったファイルに設定を書きます。
 
-  declare(strict_types=1);
+YAMLでの設定の書き方は [公式ドキュメントのこの辺り](https://api-platform.com/docs/core/serialization/#using-serialization-groups) を参考にしてください。
 
-  namespace App\Entity;
+# 実際に設定してみる
 
-+ use App\Entity\Post\Author;
-  use App\Repository\PostRepository;
-  use Doctrine\Common\Collections\ArrayCollection;
-  use Doctrine\Common\Collections\Collection;
-  use Doctrine\ORM\Mapping as ORM;
-  use Symfony\Component\Validator\Constraints as Assert;
-
-  #[ORM\Entity(repositoryClass: PostRepository::class)]
-  class Post
-  {
-      #[ORM\Id]
-      #[ORM\GeneratedValue]
-      #[ORM\Column(type: 'integer')]
-      private ?int $id = null;
-
-      #[ORM\Column(type: 'string', length: 255)]
-      #[Assert\NotBlank]
-      private string $title = '';
-
-      #[ORM\Column(type: 'text', nullable: true)]
-      private ?string $body = null;
-+
-+     #[ORM\Embedded(class: Author::class)]
-+     #[Assert\Valid]
-+     private Author $author;
-
-      /**
-       * @var Collection<int, Comment>
-       */
-      #[ORM\OneToMany(mappedBy: 'post', targetEntity: Comment::class, orphanRemoval: true)]
-      private Collection $comments;
-
-      public function __construct()
-      {
-+         $this->author = new Author();
-          $this->comments = new ArrayCollection();
-      }
-
-      // ...
-+
-+     public function getAuthor(): Author
-+     {
-+         return $this->author;
-+     }
-+
-+     public function setAuthor(Author $author): self
-+     {
-+         $this->author = $author;
-+
-+         return $this;
-+     }
-
-      // ...
-  }
-```
-
-このように修正し、DBをマイグレーションした上で `POST /api/v1/posts` で投稿を作成すると、下図のように動作します。
-
-![](https://storage.googleapis.com/zenn-user-upload/7cd3b86953e2-20220506.png)
-
-期待どおりですね。
-
-# プロパティに `openapi_context` を設定する
-
-さらに脈絡のなさそうな話が続きますがもう少しお付き合いください。
-
-これまでに何度かオペレーションの定義に `openapi_context`（特に `openapi_context.description`）を記述してAPI Docの出力内容を制御するということをやってきました。
-
-同様に、APIリソースのプロパティに対しても `openapi_context` を定義することが可能です。
-
-試しに `Post` `Comment` の各プロパティに `openapi_context.description` を定義してみましょう。
-
-書き方は以下のとおりです。
+まず、リソース定義に以下のように追記し、ノーマライズ時とデノーマライズ時それぞれどのSerialization Groupを使用するかを設定します。
 
 ```diff:config/packages/api_platform/Post.yaml
-  App\Entity\Post:
-    attributes:
-      route_prefix: /v1
-+
-+   properties:
-+     title:
-+       attributes:
-+         openapi_context:
-+           description: 投稿のタイトル
-+     body:
-+       attributes:
-+         openapi_context:
-+           description: 投稿の本文
-+     comments:
-+       attributes:
-+         openapi_context:
-+           description: 投稿に対するコメント
-
-      # ...
+  resources:
+    App\Entity\Post:
+      routePrefix: /v1
++     normalizationContext:
++       groups: [post:read]
++     denormalizationContext:
++       groups: [post:write]
 ```
 
 ```diff:config/packages/api_platform/Comment.yaml
-  App\Entity\Comment:
-    attributes:
-      route_prefix: /v1
-+
-+   properties:
-+     post:
-+       attributes:
-+         openapi_context:
-+           description: コメント先の投稿
-+     body:
-+       attributes:
-+         openapi_context:
-+           description: コメントの本文
-+     isBanned:
-+       attributes:
-+         openapi_context:
-+           description: BANされているかどうか
-
-      # ...
+  resources:
+    App\Entity\Comment:
+      routePrefix: /v1
++     normalizationContext:
++       groups: [comment:read]
++     denormalizationContext:
++       groups: [comment:write]
 ```
 
-このように `properties.{プロパティ名}.attribuets` の下に `openapi_context` の定義を書きます。
+通常はこのように `{リソース名:read}` `{リソース名:write}` といった命名規則に統一しておくと読みやすいかと思います。
 
-これで、下図のようにAPI Docにおいて各プロパティにdescriptionが出力されます。
+その上で、シリアライズの設定を以下のように記述しておけばよいでしょう。
 
-![](https://storage.googleapis.com/zenn-user-upload/c420dfa3521b-20220506.png)
+```yaml:config/packages/serializer/Post.yaml
+App\Entity\Post:
+  attributes:
+    id:
+      groups:
+        - post:read
+        - comment:read
+    title:
+      groups:
+        - post:read
+        - post:write
+        - comment:read
+    body:
+      groups:
+        - post:read
+        - post:write
+        - comment:read
+    author:
+      groups:
+        - post:read
+        - post:write
+        - comment:read
+    comments:
+      groups:
+        - post:read
+        - post:write
 
-![](https://storage.googleapis.com/zenn-user-upload/e42cbb43c694-20220506.png)
-
-# `#[ORM\Embedded]` なプロパティの `openapi_context`
-
-さて、ここから本章の本題に少しずつ迫っていきます。
-
-先ほど `Post` の各プロパティに以下のように `openapi_context` を設定しましたが、
-
-```diff:config/packages/api_platform/Post.yaml
-  App\Entity\Post:
-    attributes:
-      route_prefix: /v1
-+
-+   properties:
-+     title:
-+       attributes:
-+         openapi_context:
-+           description: 投稿のタイトル
-+     body:
-+       attributes:
-+         openapi_context:
-+           description: 投稿の本文
-+     comments:
-+       attributes:
-+         openapi_context:
-+           description: 投稿に対するコメント
-
-      # ...
+App\Entity\Post\Author:
+  attributes:
+    name:
+      groups:
+        - post:read
+        - post:write
+        - comment:read
+    birthDate:
+      groups:
+        - post:read
+        - post:write
+        - comment:read
 ```
 
-`Post` にはもう1つ `author` という `#[ORM\Embedded]` なプロパティがあり、その内部に `author.name` `author.birthDate` という末端のプロパティがありますよね。
+```yaml:config/packages/serializer/Comment.yaml
+App\Entity\Comment:
+  attributes:
+    id:
+      groups:
+        - comment:read
+        - post:read
+    post:
+      groups:
+        - comment:read
+        - comment:write
+    body:
+      groups:
+        - comment:read
+        - comment:write
+        - post:read
+```
 
-これらのプロパティの `openapi_context` を定義するにはどうすればよいのでしょうか？
+# `max_depth` を使いたい場合
 
-直感的には、
+シリアライズを設定していると、クラスが入れ子になって循環してしまうことがよくあります。
 
-```diff:config/packages/api_platform/Post.yaml
+このような場合には `max_depth` 属性（アトリビュートで言うと `#[MaxDepth]`）を使って循環の最大深さを指定するのが常套手段です。
+
+しかし、API Platformに組み込まれているSymfony Serializerはデフォルトで `max_depth` の機能が有効になっていません。
+
+[公式ドキュメントのこの部分](https://api-platform.com/docs/core/serialization/#:~:text=in%20addition%20to%20the%20groups%20key%2C%20you%20can%20configure%20any%20symfony%20serializer%20option%20through%20the%20%24context%20parameter%20(e.g.%20the%20enable_max_depthkey%20when%20using%20the%20%40maxdepth%20annotation).) に記載があるとおり、`max_depth` を使用したい場合はSymfony SerializerのContextに対して `enable_max_depth` を設定する必要があります。
+
+具体的には、[Symfony Serializerの公式ドキュメントのこの辺り](https://symfony.com/doc/current/serializer.html#serializer-context) を参考に、`config/packages/framework.yaml` に以下のように設定を追記します。
+
+```diff:config/packages/framework.yaml
+  framework:
+      serializer:
+          mapping:
+              paths: ['%kernel.project_dir%/config/packages/serializer']
++         default_context:
++             enable_max_depthe: true
+```
+
+これで、例えば以下のようにしてシリアライズ設定において `max_depth` 属性を使用できるようになります。
+
+```diff:config/packages/serializer/Post.yaml
   App\Entity\Post:
     attributes:
-      route_prefix: /v1
-
-    properties:
+      id:
+        groups:
+          - post:read
+          - comment:read
       title:
-        attributes:
-          openapi_context:
-            description: 投稿のタイトル
+        groups:
+          - post:read
+          - post:write
+          - comment:read
       body:
-        attributes:
-          openapi_context:
-            description: 投稿の本文
-+     author.name:
-+       attributes:
-+         openapi_context:
-+           description: 投稿者の名前
-+     author.birthDate:
-+       attributes:
-+         openapi_context:
-+           description: 投稿者の生年月日
+        groups:
+          - post:read
+          - post:write
+          - comment:read
+      author:
+        groups:
+          - post:read
+          - post:write
+          - comment:read
       comments:
-        attributes:
-          openapi_context:
-            description: 投稿に対するコメント
++       max_depth: 1
+        groups:
+          - post:read
+          - post:write
++         - comment:read
 
-      # ...
+  # ...
 ```
 
-こんな感じで設定を書きたくなりますが、残念ながらこういうことはできません。
-
-というか、実は **APIリソースの定義をYAMLで書いている場合、`#[ORM\Embedded]` なプロパティに対しては設定を書くこと自体ができません。**
-
-* YAMLによる定義においては、[APIリソースを定義せずにプロパティだけを定義することが不可能](https://github.com/api-platform/core/blob/v2.6.8/src/Metadata/Extractor/YamlExtractor.php#L53-L87)
-* `#[ORM\Embeddable]` なクラスをAPIリソースとして定義しようとすると、idがないため `No identifier defined in "App\Entity\Author"` といったエラーになる
-
-というのができない根拠です。
-
-したがって、`#[ORM\Embedded]` なプロパティに対して `openapi_context` を定義したい場合は、**それらのプロパティに対する定義のみ [`#[ApiProperty]` アトリビュートによって記述する](https://api-platform.com/docs/core/openapi/#using-the-openapi-and-swagger-contexts)** というなんとも残念な対応をとるしかありません😓
-
-具体的には以下のようなコードが必要になります。
-
-```diff:src/Entity/Post/Author.php
-  <?php
-
-  declare(strict_types=1);
-
-  namespace App\Entity\Post;
-
-+ use ApiPlatform\Core\Annotation\ApiProperty;
-  use Doctrine\ORM\Mapping as ORM;
-  use Symfony\Component\Validator\Constraints as Assert;
-
-  #[ORM\Embeddable]
-  class Author
-  {
-      #[ORM\Column(type: 'string', length: 255)]
-      #[Assert\NotBlank]
-+     #[ApiProperty(attributes: [
-+         'openapi_context' => [
-+             'description' => '投稿者の名前',
-+         ],
-+     ])]
-      private string $name = '';
-
-      #[ORM\Column(type: 'date')]
-      #[Assert\NotBlank]
-+     #[ApiProperty(attributes: [
-+         'openapi_context' => [
-+             'description' => '投稿者の生年月日',
-+         ],
-+     ])]
-      private ?\DateTimeInterface $birthDate = null;
-
-      public function getName(): string
-      {
-          return $this->name;
-      }
-
-      public function setName(string $name): self
-      {
-          $this->name = $name;
-
-          return $this;
-      }
-
-      public function getBirthDate(): ?\DateTimeInterface
-      {
-          return $this->birthDate;
-      }
-
-      public function setBirthDate(\DateTimeInterface $birthDate): self
-      {
-          $this->birthDate = $birthDate;
-
-          return $this;
-      }
-  }
-```
-
-これで、（当然のことながら）下図のように `author.name` `author.birthDate` にもdescriptionが出力されました。
-
-![](https://storage.googleapis.com/zenn-user-upload/02b972ba23b0-20220506.png)
-
-# `author.birthDate` のOpenAPIにおけるフォーマットを `date` に変更する
-
-ここで、`GET /api/v1/posts/latest` 等のAPI Docを改めてよく見てみると、下図のように `author.birthDate` のフォーマットが `date-time` になっていることが分かります。
-
-![](https://storage.googleapis.com/zenn-user-upload/bcec1a43e340-20220506.png)
-
-API Platformでは、PHPクラスのプロパティの型から自動でOpenAPIのプロパティの型（およびstring型の場合はフォーマット）を設定してくれます。
-
-`Author::$birthDate` は型が `\DateTimeInterface` なので、そこから類推してOpenAPIのプロパティの型も自動で `string ($date-time)` と定義されているというわけですね。
-
-しかし、`Author::$birthDate` は `\DateTimeInterface` 型ではありますが、意図している用途としては時刻に関知しない「日付」としてのプロパティであり、DBAL Typeも `'date'` を使用しています。
-
-なので、API Docに実装の意図を正しく反映するなら、フォーマットは `date-time` ではなく [`date`](https://swagger.io/specification/#:~:text=boolean-,string,As%20defined%20by%20full%2Ddate%20%2D%20RFC3339,-string) となっているべきです。
-
-このような場合、プロパティの `openapi_context` でフォーマットを明示的に指定することが可能です。
-
-`author.birthDate` は `#[ORM\Embedded]` なプロパティなので、前節で説明したとおりYAMLファイル内で `openapi_context` を定義することはできません。
-
-先ほどに引き続き、`Author` クラス内の `#[ApiProperty]` アトリビュートで設定する必要があります。
-
-```diff:src/Entity/Post/Author.php
-  #[ORM\Column(type: 'date')]
-  #[Assert\NotBlank]
-  #[ApiProperty(attributes: [
-      'openapi_context' => [
-          'description' => '投稿者の生年月日',
-+         'format' => 'date',
-      ],
-  ])]
-  private ?\DateTimeInterface $birthDate = null;
-```
-
-これで、下図のとおりフォーマットを `date` に変更することができました👍
-
-![](https://storage.googleapis.com/zenn-user-upload/3eabd25417ec-20220506.png)
-
-# プロパティのdescriptionにはDocコメントが自動で反映される
-
-ちなみに、プロパティのdescriptionはわざわざ `openapi_context.description` に書かずとも、以下のようにクラス内にDocコメントを書けばそれが自動で反映されます。個人的にはこちらのほうがコードの可読性も上がって一石二鳥なのでおすすめです。
-
-```diff:config/packages/api_platform/Post.yaml
-  App\Entity\Post:
-    attributes:
-      route_prefix: /v1
--
--   properties:
--     title:
--       attributes:
--         openapi_context:
--           description: 投稿のタイトル
--     body:
--       attributes:
--         openapi_context:
--           description: 投稿の本文
--     comments:
--       attributes:
--         openapi_context:
--           description: 投稿に対するコメント
-
-    # ...
-```
-
-```diff:config/packages/api_platform/Comment.yaml
+```diff:config/packages/serializer/Comment.yaml
   App\Entity\Comment:
     attributes:
-      route_prefix: /v1
--
--   properties:
--     post:
--       attributes:
--         openapi_context:
--           description: コメント先の投稿
--     body:
--       attributes:
--         openapi_context:
--           description: コメントの本文
--     isBanned:
--       attributes:
--         openapi_context:
--           description: BANされているかどうか
-
-    # ...
+      id:
+        groups:
+          - comment:read
+          - post:read
+      post:
++       max_depth: 1
+        groups:
+          - comment:read
+          - comment:write
++         - post:read
+      body:
+        groups:
+          - comment:read
+          - comment:write
+          - post:read
 ```
-
-```diff:src/Entity/Post.php
-+ /**
-+  * 投稿のタイトル
-+  */
-  #[ORM\Column(type: 'string', length: 255)]
-  #[Assert\NotBlank]
-  private string $title = '';
-
-+ /**
-+  * 投稿の本文
-+  */
-  #[ORM\Column(type: 'text', nullable: true)]
-  private ?string $body = null;
-
-  #[ORM\Embedded(class: Author::class)]
-  #[Assert\Valid]
-  private Author $author;
-
-  /**
-+  * 投稿に対するコメント
-+  *
-   * @var Collection<int, Comment>
-   */
-  #[ORM\OneToMany(mappedBy: 'post', targetEntity: Comment::class, orphanRemoval: true)]
-  private Collection $comments;
-```
-
-```diff:src/Entity/Post/Author.php
-+ /**
-+  * 投稿者の名前
-+  */
-  #[ORM\Column(type: 'string', length: 255)]
-  #[Assert\NotBlank]
-- #[ApiProperty(attributes: [
--     'openapi_context' => [
--         'description' => '投稿者の名前',
--     ],
-- ])]
-  private string $name = '';
-
-+ /**
-+  * 投稿者の生年月日
-+  */
-  #[ORM\Column(type: 'date')]
-  #[Assert\NotBlank]
-  #[ApiProperty(attributes: [
-      'openapi_context' => [
--         'description' => '投稿者の生年月日',
-          'format' => 'date',
-      ],
-  ])]
-  private ?\DateTimeInterface $birthDate = null;
-```
-
-```diff:src/Entity/Comment.php
-+ /**
-+  * コメント先の投稿
-+  */
-  #[ORM\ManyToOne(targetEntity: Post::class, inversedBy: 'comments')]
-  #[ORM\JoinColumn(nullable: false)]
-  #[Assert\NotBlank]
-  private ?Post $post = null;
-
-+ /**
-+  * コメントの本文
-+  */
-  #[ORM\Column(type: 'text')]
-  #[Assert\NotBlank]
-  private string $body = '';
-
-+ /**
-+  * BANされているかどうか
-+  */
-  #[ORM\Column(type: 'boolean')]
-  private bool $isBanned = false;
-```
-
-上記のように修正しても、出力されるAPI Docはまったく変わりません👌
-
-プロパティに対する `openapi_context` の設定方法については、以下の公式ドキュメント、
-
-[API Platform: OpenAPI Specification Support (formerly Swagger) `#using-the-openapi-and-swagger-contexts`](https://api-platform.com/docs/core/openapi/#using-the-openapi-and-swagger-contexts)
-
-およびOpenAPIの仕様
-
-[OpenAPI Specification - Version 3.0.3 | Swagger](https://swagger.io/specification/)
-
-を参照してください。
