--- a/books/a3800fc0912fbb/16.md
+++ b/books/a3800fc0912fbb/16.md
@@ -1,107 +1,11 @@
 ---
-title: "URIパスをlowerCamelCaseに変更する"
+title: "おわりに"
 ---
 
-# URIパスはsnake_case
+というわけで、2023年9月現在におけるAPI Platformの基本的な仕組みやよくあるユースケースで必要になるワークアラウンドについて包括的にご紹介してきました。
 
-さて、そろそろ本書も締めくくりが近づいてきました。
+API Platformは今なお活発に開発が続けられているので、今はまだバギーな部分や仕様がイマイチに思える部分も、これからどんどん洗練されていくものと思われます。
 
-最後におまけでもう1つ、多くの場合に実装することになるであろう対応について解説しておきます。
+そして、それに伴い本書の内容もすごい勢いで陳腐化していくことでしょう。（めちゃめちゃ時間をかけて書いたので少し悲しくもありますが…）
 
-API Platformが自動で作成してくれるエンドポイントのURIパスは、デフォルトで **snake_case** となります。
-
-試しに実験してみましょう。
-
-```php:src/Entity/SampleResource.php
-<?php
-
-declare(strict_types=1);
-
-namespace App\Entity;
-
-class SampleResource
-{
-    public int $id;
-}
-```
-
-このようなクラスを作って、
-
-```yaml:config/packages/api_platform/SampleResource.yaml
-App\Entity\SampleResource:
-  attributes:
-    route_prefix: /v1
-```
-
-このようにAPIリソースとして定義します。
-
-この状態でAPI Docを見てみると、
-
-![](https://storage.googleapis.com/zenn-user-upload/feca2ffccdd1-20220506.png)
-
-このように、確かにURIパスはsnake_caseになっています。
-
-# プロパティ名はlowerCamelCase
-
-しかしながら、これまで見てきたように、リクエスト/レスポンスデータのプロパティ名はPHPクラスのプロパティ名がそのまま使われるため **lowerCamelCase** となっていました。
-
-個人的には、このギャップについての認知負荷は無駄なので、どちらかに統一するのが好ましいと考えます。
-
-# URIパスをlowerCamelCaseに変更する
-
-プロパティ名の命名規則はコーディング規約の制約もあって変えにくいので、ここでは **URIパスのほうをlowerCamelCaseに変更する** ことにしましょう。
-
-URIパスの命名規則の変更方法は以下の公式ドキュメントに説明されています。
-
-[API Platform: Operation Path Naming](https://api-platform.com/docs/core/operation-path-naming/)
-
-これを参考に、以下のような `LowerCamelCasePathSegmentNameGenerator` クラスを実装しましょう。
-
-```php:src/ApiPlatform/LowerCamelCasePathSegmentNameGenerator.php
-<?php
-
-declare(strict_types=1);
-
-namespace App\ApiPlatform;
-
-use ApiPlatform\Core\Operation\PathSegmentNameGeneratorInterface;
-use ApiPlatform\Core\Util\Inflector;
-
-class LowerCamelCasePathSegmentNameGenerator implements PathSegmentNameGeneratorInterface
-{
-    public function getSegmentName(string $name, bool $collection = true): string
-    {
-        $name = lcfirst($name);
-
-        return $collection ? Inflector::pluralize($name) : $name;
-    }
-}
-```
-
-> `ApiPlatform\Core\Util\Inflector` は `@internal` マークされているクラスなので外部から利用するのはマナー違反ですが、自前で実装するのが面倒だったのでお許しください…
-
-これを、`config/services.yaml` で以下のようにサービスとして定義し、
-
-```yaml
-services:
-    App\ApiPlatform\LowerCamelCasePathSegmentNameGenerator: ~
-```
-
-最後に `config/packages/api_platform.yaml` で以下のように上記サービスを使用するよう設定すれば完了です。
-
-```diff
-  api_platform:
-      mapping:
-          paths:
-              - '%kernel.project_dir%/src/Entity'
-              - '%kernel.project_dir%/config/packages/api_platform'
-      patch_formats:
-          json: ['application/merge-patch+json']
-      swagger:
-          versions: [3]
-+     path_segment_name_generator: App\ApiPlatform\LowerCamelCasePathSegmentNameGenerator
-```
-
-この状態で再度API Docを見てみると、下図のとおりlowerCamelCaseに変更できていることが確認できます👌
-
-![](https://storage.googleapis.com/zenn-user-upload/30db2b38d062-20220506.png)
+API Platformのベージョンアップにタイムリーに追随して本書の内容をアップデートしていくことはおそらく筆者のリソース的に難しいと思いますが、致命的な異変や間違いなどを見つけられた方は、[やさしくご指摘](https://zenn.dev/ttskch/scraps/24dbebd7fb6ff1) いただけるとありがたいです。
