--- a/books/a3800fc0912fbb/2.md
+++ b/books/a3800fc0912fbb/2.md
@@ -85,7 +85,7 @@ $ bin/console make entity Comment
   
   namespace App\Entity;
   
-+ use ApiPlatform\Core\Annotation\ApiResource;
++ use ApiPlatform\Metadata\ApiResource;
   use App\Repository\PostRepository;
   use Doctrine\Common\Collections\ArrayCollection;
   use Doctrine\Common\Collections\Collection;
@@ -107,7 +107,7 @@ $ bin/console make entity Comment
   
   namespace App\Entity;
   
-+ use ApiPlatform\Core\Annotation\ApiResource;
++ use ApiPlatform\Metadata\ApiResource;
   use App\Repository\CommentRepository;
   use Doctrine\ORM\Mapping as ORM;
   use Symfony\Component\Validator\Constraints as Assert;
