--- a/books/a3800fc0912fbb/3.md
+++ b/books/a3800fc0912fbb/3.md
@@ -51,61 +51,111 @@ title: "オペレーションをカスタマイズする"
 IRIを使ってコメントを作成することはできましたが、より一般的なURI設計として、
 
 ```
-POST /api/posts/{id}/comments
+POST /api/posts/{postId}/comments
 ```
 
 という形で、URI上でアプリレイヤーのIDを使って投稿を指定できると使い勝手がよさそうです。
 
 というわけで、このようにURI構造を変更してみましょう。
 
-[API Platform: Operations `#configuring-operations`](https://api-platform.com/docs/core/operations/#configuring-operations)
+[Operations - API Platform `#configuring-operations`](https://api-platform.com/docs/core/operations/#configuring-operations)
 
-を参考に、`#[ApiResource]` アトリビュートで `collectionOperations.post.path` を設定します。
+を参考に、`#[ApiResource]` アトリビュートで `operations` を明示的に設定します。
 
 ```php
-#[ApiResource(
-    collectionOperations: [
-        'get',
-        'post' => [
-            'path' => '/posts/{id}/comments',
-        ],
-    ],
-)]
+use ApiPlatform\Metadata\ApiResource;
+use ApiPlatform\Metadata\Delete;
+use ApiPlatform\Metadata\Get;
+use ApiPlatform\Metadata\GetCollection;
+use ApiPlatform\Metadata\Patch;
+use ApiPlatform\Metadata\Put;
+
+#[ApiResource(operations: [
+    new GetCollection(),
+    new Get(),
+    new Put(),
+    new Delete(),
+    new Patch(),
+    new \ApiPlatform\Metadata\Post(
+        uriTemplate: '/posts/{postId}/comments',
+    ),
+])]
 class Comment
 ```
 
-`'get',` の行をなくしてしまうと「Collectionオペレーションは `post` だけしかない」という意味になってしまうので、デフォルトの挙動のまま `get` を残すためにこの行が必要な点にご注意ください。
+`new \ApiPlatform\Metadata\Post(...)` 以外の行をなくしてしまうと、省略されたオペレーションはリソースに対して定義されていないことになってしまうので、デフォルトの挙動のまま各種オペレーションを残すために、`new GetCollection(),` から `new Patch(),` までの行も必要な点にご注意ください。
 
-これでエンドポイントのURIは変更できたはずなので、実際にリクエストしてみましょう。
+> なお、今回たまたま `Post` というクラス名がエンティティ名と株っているため、`new \ApiPlatform\Metadata\Post(...)` のみFQCNで書いています。
 
-![](https://storage.googleapis.com/zenn-user-upload/f56682d1f604-20220505.png)
+さて、とりあえずURIの設定だけを変更してみましたが、現状「URI内の `{postId}` パラメータを投稿IDと見なして、作成されるコメントの `post` プロパティに指定された投稿を紐づける」という処理はどこにもないので、残念ながらこのままでは動きません。
 
-`post` プロパティの `NotBlank` 制約違反のエラーが返ってきましたね。
+このようにURI内の変数によってリソースの親子関係を表現したい場合は、`Subresources` という仕組みを使用します。
 
-URIの設定だけを変更しても、「URI内の `{id}` パラメータを投稿IDと見なして、作成されるコメントの `post` プロパティに指定された投稿を紐づける」という処理はどこにもないので、当然の結果と言えます。
+[Subresources - API Platform](https://api-platform.com/docs/core/subresources/)
 
-この場合、コントローラを自作して、その中で上記のような処理を行うようにする必要があります。
+上記ドキュメントを参考に、ひとまず以下のように対応してみましょう。
+
+```diff
++ use ApiPlatform\Metadata\Link;
+
+  #[ApiResource(operations: [
+      new GetCollection(),
+      new Get(),
+      new Put(),
+      new Delete(),
+      new Patch(),
+      new \ApiPlatform\Metadata\Post(
+          uriTemplate: '/posts/{postId}/comments',
++         uriVariables: [
++             'postId' => new Link(
++                 fromClass: Post::class,
++                 toProperty: 'post',
++             ),
++         ],
+      ),
+  ])]
+  class Comment
+```
+
+雰囲気的には、これで `postId` が自動で `Post` エンティティのインスタンスに変換されそうな感じがするのですが、実はPOST/PUTメソッドでリソースを新規作成する文脈においては、残念ながらそういう挙動にはなりません。
+
+POST/PUTメソッドの文脈においては、あくまでSubresourcesの設定によって「いざ `Comment` エンティティを作成する際に、`Comment::$post` プロパティを既存の `Post` エンティティに紐づけて作成することが **可能になった**」に過ぎず、「これから保存すべき新規 `Comment` エンティティを、`postId` で指定された `Post` エンティティを紐づけた状態で準備する」作業は手動で行う必要があります。（[参考](https://github.com/api-platform/api-platform/issues/571#issuecomment-1473665701)）
+
+具体的には、ここまでの対応に加えて、さらにコントローラを自作して、その中で「これから保存すべき新規 `Comment` エンティティを、`postId` で指定された `Post` エンティティを紐づけた状態で準備する」作業を行う必要があります。
 
 コントローラを自作する手順については
 
-[API Platform: Creating Custom Operations and Controllers](https://api-platform.com/docs/core/controllers/)
+[Creating Custom Operations and Controllers - API Platform](https://api-platform.com/docs/core/controllers/)
 
 に詳細が書かれています。上記ドキュメントを参考に、以下のように対応することで期待どおりの挙動が実現できます。
 
 ```diff
-  #[ApiResource(
-      collectionOperations: [
-          'get',
-          'post' => [
-              'path' => '/posts/{id}/comments',
-+             'controller' => CollectionPostController::class,
++ use App\Controller\Comment\PostController;
+
+  #[ApiResource(operations: [
+      new GetCollection(),
+      new Get(),
+      new Put(),
+      new Delete(),
+      new Patch(),
+      new \ApiPlatform\Metadata\Post(
+          uriTemplate: '/posts/{postId}/comments',
+          uriVariables: [
+              'postId' => new Link(
+                  fromClass: Post::class,
+                  toProperty: 'post',
+              ),
           ],
-      ],
-  )]
++         read: false,
++         controller: PostController::class,
+      ),
+  ])]
   class Comment
 ```
 
-```php:src/Controller/Comment/CollectionPostController.php
+> `read: false,` については次章で解説します。ここでは一旦「おまじない」と思って無視してください🙏
+
+```php:src/Controller/Comment/PostController.php
 <?php
 
 declare(strict_types=1);
@@ -119,15 +169,15 @@ use Symfony\Component\HttpKernel\Attribute\AsController;
 use Symfony\Component\HttpKernel\Exception\NotFoundHttpException;
 
 #[AsController]
-class CollectionPostController extends AbstractController
+class PostController extends AbstractController
 {
     public function __construct(private PostRepository $postRepository)
     {
     }
 
-    public function __invoke(Comment $data, int $id): Comment
+    public function __invoke(Comment $comment, int $postId): Comment
     {
-        $post = $this->postRepository->find($id);
+        $post = $this->postRepository->find($postId);
 
         if (!$post) {
             throw new NotFoundHttpException();
@@ -138,49 +188,12 @@ class CollectionPostController extends AbstractController
 }
 ```
 
-コントローラの `__invoke()` メソッドは、第一引数で `$data` という変数名でAPIリソースに対応するクラスのインスタンスを、第二引数以降でURIパラメータに対応する値を受け取ることができます。
+コントローラの `__invoke()` メソッドは、第一引数でAPIリソースに対応するクラスのインスタンスを、第二引数以降でURIパラメータに対応する値を受け取ることができます。
 
-なお、[公式ドキュメントのこの部分](https://api-platform.com/docs/core/controllers/#:~:text=warning%3A%20the%20__invoke()%20method%20parameter%20must%20be%20called%20%24data%2C%20otherwise%2C%20it%20will%20not%20be%20filled%20correctly!) に記載されているとおり、第一引数の変数名は `$data` としなければ正常に動作しないので要注意です。
-
-第二引数以降のURIパラメータは、`#[ApiResource]` の `path` の定義に使用したプレースホルダーと同じ名前の変数名を宣言することで値を受け取ることができます。（今回は `{id}` というプレースホルダーを定義したので、`$id` という引数がマッピングされています）
+第二引数以降のURIパラメータは、`#[ApiResource]` の `uriTemplate` の定義に使用したプレースホルダーと同じ名前の変数名を宣言することで値を受け取ることができます。（今回は `{postId}` というプレースホルダーを定義したので、`$postId` という引数がマッピングされています）
 
 では、この状態で実際にリクエストしてみましょう。
 
 ![](https://storage.googleapis.com/zenn-user-upload/e478db08ce0b-20220505.png)
 
 今度は期待どおりに動作していますね！👍
-
-# ParamConverterを使用する
-
-もちろん通常のSymfonyアプリと同様、[SensioFrameworkExtraBundle](https://symfony.com/doc/current/SensioFrameworkExtraBundle/index.html) をインストールすれば [ParamConverter](https://symfony.com/doc/current/SensioFrameworkExtraBundle/annotations/converters.html) を使って投稿IDを自動で `Post` エンティティに変換することも可能です。
-
-```shell
-$ composer require sensio/framework-extra-bundle
-```
-
-```php
-<?php
-
-declare(strict_types=1);
-
-namespace App\Controller\Comment;
-
-use App\Entity\Comment;
-use App\Entity\Post;
-use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
-use Symfony\Component\HttpKernel\Attribute\AsController;
-use Symfony\Component\HttpKernel\Exception\NotFoundHttpException;
-
-#[AsController]
-class CollectionPostController extends AbstractController
-{
-    public function __invoke(Comment $data, ?Post $post): Comment
-    {
-        if (!$post) {
-            throw new NotFoundHttpException();
-        }
-
-        return $data->setPost($post);
-    }
-}
-```
