--- a/books/a3800fc0912fbb/6.md
+++ b/books/a3800fc0912fbb/6.md
@@ -1,44 +1,38 @@
 ---
-title: "独自Data Providerでページネーションする"
+title: "独自State Providerでページネーションする"
 ---
 
 # 現状の実装ではコメント一覧がページネーションされない
 
-前章で、`GET /api/comments` でコメントの一覧を取得した際に、BANされていないコメントのみが取得されるようにData Providerを自作しました。
+前章で、`GET /api/comments` でコメントの一覧を取得した際に、BANされていないコメントのみが取得されるようにState Providerを自作しました。
 
-しかし、実は現状のData Providerの実装には、**取得された一覧がページネーションされなくなってしまっている** という不備があります。
+しかし、実は現状のState Providerの実装には、**取得された一覧がページネーションされなくなってしまっている** という不備があります。
 
-現状のData Providerのコードを改めて確認してみましょう。
+現状のState Providerのコードを改めて確認してみましょう。
 
 ```php
 <?php
 
 declare(strict_types=1);
 
-namespace App\DataProvider\Comment;
+namespace App\State\Provider\Comment;
 
-use ApiPlatform\Core\DataProvider\ContextAwareCollectionDataProviderInterface;
-use ApiPlatform\Core\DataProvider\RestrictedDataProviderInterface;
+use ApiPlatform\Metadata\Operation;
+use ApiPlatform\State\ProviderInterface;
 use App\Entity\Comment;
 use App\Repository\CommentRepository;
 
-final class CollectionDataProvider implements ContextAwareCollectionDataProviderInterface, RestrictedDataProviderInterface
+/**
+ * @implements ProviderInterface<Comment>
+ */
+class GetCollectionProvider implements ProviderInterface
 {
     public function __construct(private CommentRepository $commentRepository)
     {
     }
 
-    public function supports(string $resourceClass, string $operationName = null, array $context = []): bool
+    public function provide(Operation $operation, array $uriVariables = [], array $context = []): object|array|null
     {
-        return Comment::class === $resourceClass;
-    }
-
-    /**
-     * @return iterable<Comment>
-     */
-    public function getCollection(string $resourceClass, string $operationName = null, array $context = []): iterable
-    {
-        /** @var iterable<Comment> $comments */
         $comments = $this->commentRepository->findBy(['isBanned' => false]);
 
         return $comments;
@@ -46,7 +40,7 @@ final class CollectionDataProvider implements ContextAwareCollectionDataProvider
 }
 ```
 
-`getCollection()` メソッドにおいて、リポジトリから `findBy()` で取得した結果セットの配列をそのまま返していますが、実はこれだとページネーションが行われません。
+`provide()` メソッドにおいて、リポジトリから `findBy()` で取得した結果セットの配列をそのまま返していますが、実はこれだとページネーションが行われません。
 
 実験してみましょう。
 
@@ -59,9 +53,7 @@ final class CollectionDataProvider implements ContextAwareCollectionDataProvider
 ```diff:config/packages/api_platform.yaml
   api_platform:
       mapping:
-          paths:
-              - '%kernel.project_dir%/src/Entity'
-              - '%kernel.project_dir%/config/packages/api_platform'
+          paths: ['%kernel.project_dir%/src/Entity']
       patch_formats:
           json: ['application/merge-patch+json']
       swagger:
@@ -76,27 +68,23 @@ final class CollectionDataProvider implements ContextAwareCollectionDataProvider
 
 # API Platformにおけるページネーション
 
-実は、API Platformにおいてページネーションを実現するためには、Collection Data Providerの `getCollection()` メソッドで [`ApiPlatform\Core\DataProvider\PaginatorInterface` のインスタンスを返す必要があります](https://api-platform.com/docs/core/data-providers/#custom-collection-data-provider)。
+実は、API Platformにおいてページネーションを実現するためには、State Providerの `provide()` メソッドで [`ApiPlatform\State\Pagination\PaginatorInterface` のインスタンスを返す必要があります](https://api-platform.com/docs/core/pagination/#pagination-for-custom-state-providers)。
 
-ページネーションインスタンスを作成する方法は、以下の公式ドキュメントに詳細が記載されています。
+ページネーションやフィルタ機能（本書でも後述します）をCollectionに適用するためには、それらの機能ごとに用意されている `CollectionExtension` を、Collectionを表すQueryBuilderに対して「適用する」というプロセスが必要です。
 
-[API Platform: Data Providers `#injecting-extensions-pagination-filter-eagerloading-etc`](https://api-platform.com/docs/core/data-providers/#injecting-extensions-pagination-filter-eagerloading-etc)
+`CollectionExtension` とは、サービスコンテナにおいて `api_platform.doctrine.orm.query_extension.collection` というタグが付加されている、[`ApiPlatform\Doctrine\Orm\Extension\QueryCollectionExtensionInterface`](https://github.com/api-platform/core/blob/v3.1.18/src/Doctrine/Orm/Extension/QueryCollectionExtensionInterface.php) または [`ApiPlatform\Doctrine\Orm\Extension\QueryResultCollectionExtensionInterface`](https://github.com/api-platform/core/blob/v3.1.18/src/Doctrine/Orm/Extension/QueryResultCollectionExtensionInterface.php) の実装クラスのことです。
 
-ページネーションやフィルタ機能（本書でも後述します）をCollectionに適用するためには、それらの機能ごとに用意されている `CollectionExtension` というものを、Collectionを表すQueryBuilderに対して「適用する」というプロセスが必要とのことです。
+自作することも可能ですが、デフォルトでは `ApiPlatform\Doctrine\Orm\Extension` という名前空間の配下に `PaginationExtension` や `FilterExtension` などいくつかの実装がデフォルトで用意されています。
 
-ここで `CollectionExtension` と呼んでいるのは、サービスコンテナにおいて `api_platform.doctrine.orm.query_extension.collection` というタグが付加されている、[`ApiPlatform\Core\Bridge\Doctrine\Orm\Extension\ContextAwareQueryCollectionExtensionInterface`](https://github.com/api-platform/core/blob/v2.6.8/src/Bridge/Doctrine/Orm/Extension/ContextAwareQueryCollectionExtensionInterface.php) または [`ApiPlatform\Core\Bridge\Doctrine\Orm\Extension\ContextAwareQueryResultCollectionExtensionInterface`](https://github.com/api-platform/core/blob/v2.6.8/src/Bridge/Doctrine/Orm/Extension/ContextAwareQueryResultCollectionExtensionInterface.php) の実装クラスのことです。
+自作のCollection State Providerでは、いきなり結果セットを取得して返すのではなく、**結果セットを取得するためのQueryBuilderを作成し、QueryBuilderにこれらの `CollectionExtension` を適用した後で結果セットを取得して返す** という対応が必要というわけです。
 
-自作することも可能ですが、デフォルトでは `ApiPlatform\Core\Bridge\Doctrine\Orm\Extension` という名前空間の配下に `PaginationExtension` や `FilterExtension` などいくつかの実装がデフォルトで用意されています。
+# コメントCollection State Providerをページネーションに対応させる
 
-自作のCollection Data Providerでは、いきなり結果セットを取得して返すのではなく、**結果セットを取得するためのQueryBuilderを作成し、QueryBuilderにこれらの `CollectionExtension` を適用した後で結果セットを取得して返す** という対応が必要というわけです。
+具体的なコードに沿って対応方法を見ていきましょう。
 
-# コメントCollection Data Providerをページネーションに対応させる
+まず、既存の `App\State\Provider\Comment\GetCollectionProvider` に `CollectionExtension` 群をインジェクトする必要があります。
 
-ほぼドキュメントに書かれているとおりの手順ですが、具体的なコードに沿って対応方法を見ていきましょう。
-
-まず、既存の `App\DataProvider\Comment\CollectionDataProvider` に `CollectionExtension` 群をインジェクトする必要があります。
-
-ドキュメントではData Providerクラスごとにインジェクトする例が示されていますが、今後たくさんのCollection Data Providerを作っていく可能性を考えて、[変数名ベースのインジェクト](https://symfony.com/doc/current/service_container.html#binding-arguments-by-name-or-type) を使って一回の設定だけですべてのCollection Data Providerに共通して適用できるようにしておきます。
+State Providerクラスのサービス定義内でインジェクトを設定することもできますが、今後たくさんのCollection State Providerを作っていく可能性を考えて、[変数名ベースのインジェクト](https://symfony.com/doc/current/service_container.html#binding-arguments-by-name-or-type) を使って一回の設定だけですべてのCollection State Providerに共通して適用できるようにしておきます。
 
 ```diff:config/services.yaml
   services:
@@ -114,63 +102,59 @@ final class CollectionDataProvider implements ContextAwareCollectionDataProvider
 
 これで、`$collectionExtensions` という引数に対しては常に `api_platform.doctrine.orm.query_extension.collection` でタグ付けされているサービス群がインジェクトされることになります。
 
-その上で、`App\DataProvider\Comment\CollectionDataProvider` を以下のような実装に修正します。
+その上で、`App\State\Provider\Comment\GetCollectionProvider` を以下のような実装に修正します。
 
 ```php
 <?php
 
 declare(strict_types=1);
 
-namespace App\DataProvider\Comment;
+namespace App\State\Provider\Comment;
 
-use ApiPlatform\Core\Bridge\Doctrine\Orm\Extension\ContextAwareQueryResultCollectionExtensionInterface;
-use ApiPlatform\Core\Bridge\Doctrine\Orm\Util\QueryNameGenerator;
-use ApiPlatform\Core\DataProvider\ContextAwareCollectionDataProviderInterface;
-use ApiPlatform\Core\DataProvider\RestrictedDataProviderInterface;
+use ApiPlatform\Doctrine\Orm\Extension\QueryResultCollectionExtensionInterface;
+use ApiPlatform\Doctrine\Orm\Util\QueryNameGenerator;
+use ApiPlatform\Metadata\Operation;
+use ApiPlatform\State\ProviderInterface;
 use App\Entity\Comment;
 use App\Repository\CommentRepository;
 use Doctrine\ORM\QueryBuilder;
 
-final class CollectionDataProvider implements ContextAwareCollectionDataProviderInterface, RestrictedDataProviderInterface
+/**
+ * @implements ProviderInterface<Comment>
+ */
+class GetCollectionProvider implements ProviderInterface
 {
-    public function __construct(private iterable $collectionExtensions, private CommentRepository $commentRepository)
-    {
+    public function __construct(
+        private iterable $collectionExtensions,
+        private CommentRepository $commentRepository,
+    )    {
     }
 
-    public function supports(string $resourceClass, string $operationName = null, array $context = []): bool
-    {
-        return Comment::class === $resourceClass;
-    }
-
-    /**
-     * @return iterable<Comment>
-     */
-    public function getCollection(string $resourceClass, string $operationName = null, array $context = []): iterable
+    public function provide(Operation $operation, array $uriVariables = [], array $context = []): object|array|null
     {
         $qb = $this->commentRepository->createQueryBuilder('co')
             ->andWhere('co.isBanned = false')
         ;
 
-        /** @var iterable<Comment> $comments */
-        $result = $this->getResult($qb, $resourceClass, $operationName, $context);
-
-        return $result;
+        return $this->getResult($qb, Comment::class, $operation, $context);
     }
 
-    private function getResult(QueryBuilder $qb, string $resourceClass, ?string $operationName, array $context): iterable
+    /**
+     * @return iterable<Comment>
+     */
+    private function getResult(QueryBuilder $qb, string $resourceClass, Operation $operation, array $context): iterable
     {
         $resultExtension = null;
 
         foreach ($this->collectionExtensions as $extension) {
-            $extension->applyToCollection($qb, $generator ??= new QueryNameGenerator(), $resourceClass, $operationName, $context);
+            $extension->applyToCollection($qb, new QueryNameGenerator(), $resourceClass, $operation, $context);
 
-            if ($extension instanceof ContextAwareQueryResultCollectionExtensionInterface && $extension->supportsResult($resourceClass, $operationName, $context)) {
-                $resultExtension = $extension;
+            if ($extension instanceof QueryResultCollectionExtensionInterface && $extension->supportsResult($resourceClass, $operation, $context)) {
+                $resultExtension ??= $extension;
             }
         }
 
-        /** @var iterable $result */
-        $result = $resultExtension ? $resultExtension->getResult($qb, $resourceClass, $operationName, $context) : $qb->getQuery()->getResult();
+        $result = $resultExtension ? $resultExtension->getResult($qb, $resourceClass, $operation, $context) : $qb->getQuery()->getResult();
 
         return $result;
     }
@@ -179,11 +163,11 @@ final class CollectionDataProvider implements ContextAwareCollectionDataProvider
 
 QueryBuilderに `CollectionExtension` を適用していく処理は `getResult()` というprivateメソッドに分けてあります。
 
-インジェクトされた `$collectionExtensions` を順に適用していきながら、その中に [`ContextAwareQueryResultCollectionExtensionInterface`](https://github.com/api-platform/core/blob/v2.6.8/src/Bridge/Doctrine/Orm/Extension/ContextAwareQueryResultCollectionExtensionInterface.php) を実装している `CollectionExtension` があれば、最後にその `getResult()` 結果を返し、なければすべて適用しおえたQueryBuilderから結果セットの配列を取得して返す、という処理を行っています。
+インジェクトされた `$collectionExtensions` を順に適用していきながら、その中に [`QueryResultCollectionExtensionInterface`](https://github.com/api-platform/core/blob/v3.1.18/src/Doctrine/Orm/Extension/QueryResultCollectionExtensionInterface.php) を実装している `CollectionExtension` があれば、最後にその `getResult()` 結果を返し、なければすべて適用しおえたQueryBuilderから結果セットの配列を取得して返す、という処理を行っています。
 
-先に少し触れたように、`CollectionExtension` には、`ContextAwareQueryCollectionExtensionInterface` を実装しているものと `ContextAwareQueryResultCollectionExtensionInterface` を実装しているものの2種類があります。
+先に少し触れたように、`CollectionExtension` には、`QueryCollectionExtensionInterface` を実装しているものと `QueryResultCollectionExtensionInterface` を実装しているものの2種類があります。
 
-例えば `FilterExtension` は [`ContextAwareQueryCollectionExtensionInterface`](https://github.com/api-platform/core/blob/v2.6.8/src/Bridge/Doctrine/Orm/Extension/ContextAwareQueryCollectionExtensionInterface.php) の実装であり、**最終的な結果セットを生成する機能（`getResult()` メソッド）を持ちません** が、`PaginationExtension` は [`ContextAwareQueryResultCollectionExtensionInterface`](https://github.com/api-platform/core/blob/v2.6.8/src/Bridge/Doctrine/Orm/Extension/ContextAwareQueryResultCollectionExtensionInterface.php) の実装であり、**最終的な結果セットを生成する機能（`getResult()` メソッド）を持ちます。**
+例えば `FilterExtension` は [`QueryCollectionExtensionInterface`](https://github.com/api-platform/core/blob/v3.1.18/src/Doctrine/Orm/Extension/QueryCollectionExtensionInterface.php) の実装であり、**最終的な結果セットを生成する機能（`getResult()` メソッド）を持ちません** が、`PaginationExtension` は [`QueryResultCollectionExtensionInterface`](https://github.com/api-platform/core/blob/v3.1.18/src/Doctrine/Orm/Extension/QueryResultCollectionExtensionInterface.php) の実装であり、**最終的な結果セットを生成する機能（`getResult()` メソッド）を持ちます。**
 
 これで対応は完了なので、改めて `GET /api/comments` の結果を見てみましょう。
 
@@ -191,43 +175,45 @@ QueryBuilderに `CollectionExtension` を適用していく処理は `getResult(
 
 無事にページネーションが適用されていますね！👍
 
-# `CollectionExtension` を適用する処理を基底クラスに移動する
+# `CollectionExtension` を適用する処理をTraitに分離する
 
 最後に少しだけリファクタしておきます。
 
-先ほど `CollectionExtension` をQueryBuilderに適用する処理を `getResult()` privateメソッドに書きましたが、今後たくさんのCollection Data Providerを作っていくと、すべてのクラスにこのメソッドを実装しなければなりません。
+先ほど `CollectionExtension` をQueryBuilderに適用する処理を `getResult()` privateメソッドに書きましたが、今後たくさんのCollection State Providerを作っていくと、すべてのクラスにこのメソッドを実装しなければなりません。
 
-これは無駄なので、基底クラスを作ってそちらにこのメソッドを移動させておくことにしましょう。
+これは無駄なので、Traitを作ってそちらにこのメソッドを移動させておくことにしましょう。
 
-まず、以下のような抽象基底クラスを作り、`getResult()` メソッドを移植します。
+まず、以下のようなTraitを作り、`getResult()` メソッドを移植します。
 
-```php:src/DataProvider/AbstractCollectionDataProvider.php
+```php:src/Traits/CollectionStateProviderTrait.php
 <?php
 
 declare(strict_types=1);
 
-namespace App\DataProvider;
+namespace App\Traits;
 
-use ApiPlatform\Core\Bridge\Doctrine\Orm\Extension\ContextAwareQueryCollectionExtensionInterface;
-use ApiPlatform\Core\Bridge\Doctrine\Orm\Extension\ContextAwareQueryResultCollectionExtensionInterface;
-use ApiPlatform\Core\Bridge\Doctrine\Orm\Util\QueryNameGenerator;
+use ApiPlatform\Doctrine\Orm\Extension\QueryCollectionExtensionInterface;
+use ApiPlatform\Doctrine\Orm\Extension\QueryResultCollectionExtensionInterface;
+use ApiPlatform\Doctrine\Orm\Util\QueryNameGenerator;
+use ApiPlatform\Metadata\Operation;
 use Doctrine\ORM\QueryBuilder;
+use Symfony\Contracts\Service\Attribute\Required;
 
 /**
  * @template T
  */
-abstract class AbstractCollectionDataProvider
+trait CollectionStateProviderTrait
 {
     /**
-     * @var iterable<ContextAwareQueryCollectionExtensionInterface|ContextAwareQueryResultCollectionExtensionInterface>
+     * @var iterable<QueryCollectionExtensionInterface|QueryResultCollectionExtensionInterface>
      */
     protected iterable $extensions;
 
     /**
-     * @param iterable<ContextAwareQueryCollectionExtensionInterface|ContextAwareQueryResultCollectionExtensionInterface> $collectionExtensions
+     * @param iterable<QueryCollectionExtensionInterface|QueryResultCollectionExtensionInterface> $collectionExtensions
      */
     #[Required]
-    final public function setExtension(iterable $collectionExtensions): void
+    public function setExtension(iterable $collectionExtensions): void
     {
         $this->extensions = $collectionExtensions;
     }
@@ -235,67 +221,64 @@ abstract class AbstractCollectionDataProvider
     /**
      * @return iterable<T>
      */
-    final protected function getResult(QueryBuilder $qb, string $resourceClass, ?string $operationName, array $context): iterable
+    protected function getResult(QueryBuilder $qb, string $resourceClass, Operation $operation, array $context): iterable
     {
         $resultExtension = null;
 
         foreach ($this->extensions as $extension) {
-            $extension->applyToCollection($qb, $generator ??= new QueryNameGenerator(), $resourceClass, $operationName, $context);
+            $extension->applyToCollection($qb, new QueryNameGenerator(), $resourceClass, $operation, $context);
 
-            if ($extension instanceof ContextAwareQueryResultCollectionExtensionInterface && $extension->supportsResult($resourceClass, $operationName, $context)) {
-                $resultExtension = $extension;
+            if ($extension instanceof QueryResultCollectionExtensionInterface && $extension->supportsResult($resourceClass, $operation, $context)) {
+                $resultExtension ??= $extension;
             }
         }
 
         /** @var iterable<T> $result */
-        $result = $resultExtension ? $resultExtension->getResult($qb, $resourceClass, $operationName, $context) : $qb->getQuery()->getResult();
+        $result = $resultExtension ? $resultExtension->getResult($qb, $resourceClass, $operation, $context) : $qb->getQuery()->getResult();
 
         return $result;
     }
 }
 ```
 
-基底クラスに常に `$collectionExtensions` をインジェクトするために、setterメソッドに [`#[Required]` アトリビュート](https://symfony.com/doc/current/service_container/autowiring.html#autowiring-other-methods-e-g-setters-and-public-typed-properties) を付加してコンテナ構築時に常に実行されるようにしてあります。
+Traitに常に `$collectionExtensions` をインジェクトするために、setterメソッドに [`#[Required]` アトリビュート](https://symfony.com/doc/current/service_container/autowiring.html#autowiring-other-methods-e-g-setters-and-public-typed-properties) を付加してコンテナ構築時に常に実行されるようにしてあります。
 
-これで、`App\DataProvider\Comment\CollectionDataProvider` は以下のように非常にスッキリした実装にできます。
+これで、`App\State\Provider\Comment\GetCollectionProvider` は以下のように非常にスッキリした実装にできます。
 
 ```php
 <?php
 
 declare(strict_types=1);
 
-namespace App\DataProvider\Comment;
+namespace App\State\Provider\Comment;
 
-use ApiPlatform\Core\DataProvider\ContextAwareCollectionDataProviderInterface;
-use ApiPlatform\Core\DataProvider\RestrictedDataProviderInterface;
-use App\DataProvider\AbstractCollectionDataProvider;
+use ApiPlatform\Metadata\Operation;
+use ApiPlatform\State\ProviderInterface;
 use App\Entity\Comment;
 use App\Repository\CommentRepository;
+use App\Traits\CollectionStateProviderTrait;
 
 /**
- * @extends AbstractCollectionDataProvider<Comment>
+ * @implements ProviderInterface<Comment>
  */
-final class CollectionDataProvider extends AbstractCollectionDataProvider implements ContextAwareCollectionDataProviderInterface, RestrictedDataProviderInterface
+class GetCollectionProvider implements ProviderInterface
 {
+    /**
+     * @phpstan-use CollectionStateProviderTrait<Comment>
+     */
+    use CollectionStateProviderTrait;
+
     public function __construct(private CommentRepository $commentRepository)
     {
     }
 
-    public function supports(string $resourceClass, string $operationName = null, array $context = []): bool
-    {
-        return Comment::class === $resourceClass;
-    }
-
-    /**
-     * @return iterable<Comment>
-     */
-    public function getCollection(string $resourceClass, string $operationName = null, array $context = []): iterable
+    public function provide(Operation $operation, array $uriVariables = [], array $context = []): object|array|null
     {
         $qb = $this->commentRepository->createQueryBuilder('co')
             ->andWhere('co.isBanned = false')
         ;
 
-        return $this->getResult($qb, $resourceClass, $operationName, $context);
+        return $this->getResult($qb, Comment::class, $operation, $context);
     }
 }
 ```
@@ -305,9 +288,7 @@ final class CollectionDataProvider extends AbstractCollectionDataProvider implem
 ```diff:config/packages/api_platform.yaml
   api_platform:
       mapping:
-          paths:
-              - '%kernel.project_dir%/src/Entity'
-              - '%kernel.project_dir%/config/packages/api_platform'
+          paths: ['%kernel.project_dir%/src/Entity']
       patch_formats:
           json: ['application/merge-patch+json']
       swagger:
