--- a/books/a3800fc0912fbb/7.md
+++ b/books/a3800fc0912fbb/7.md
@@ -7,36 +7,39 @@ title: "設定をアトリビュートではなくYAMLで行う"
 ところで、ここまでの実装で `Comment` クラスの `#[ApiResource]` アトリビュートは以下のような内容になっています。
 
 ```php
-#[ApiResource(
-    collectionOperations: [
-        'get',
-        'post' => [
-            'path' => '/posts/{id}/comments',
-            'controller' => CollectionPostController::class,
+#[ApiResource(operations: [
+    new GetCollection(
+        provider: GetCollectionProvider::class,
+    ),
+    new Get(
+        controller: NotFoundAction::class,
+        read: false,
+        output: false,
+        openapiContext: [
+            'description' => '#hidden',
         ],
-    ],
-    itemOperations: [
-        'get' => [
-            'controller' => NotFoundAction::class,
-            'read' => false,
-            'output' => false,
-            'openapi_context' => [
-                'description' => '#hidden',
-            ],
+    ),
+    new \ApiPlatform\Metadata\Post(
+        uriTemplate: '/posts/{postId}/comments',
+        uriVariables: [
+            'postId' => new Link(
+                fromClass: Post::class,
+                toProperty: 'post',
+            ),
         ],
-        'ban' => [
-            'method' => 'put',
-            'path' => '/comments/{id}/ban',
-            'controller' => ItemBanController::class,
-            'input' => false,
-        ],
-    ],
-)]
+        provider: PostProvider::class,
+    ),
+    new Put(
+        uriTemplate: '/comments/{id}/ban',
+        controller: BanController::class,
+        input: false,
+    ),
+])]
 ```
 
 まだほんのわずかな機能しか実装していないにもかかわらずこの分量です。
 
-これからもっと複雑なオペレーションを定義したり、`openapi_context` を細かく設定したりする可能性を考えると、さすがにそろそろアトリビュートで設定するのはやめてYAMLなどの外部ファイルに設定をまとめたくなってきますね。
+これからもっと複雑なオペレーションを定義したり、`openapiContext` を細かく設定したりする可能性を考えると、さすがにそろそろアトリビュートで設定するのはやめてYAMLなどの外部ファイルに設定をまとめたくなってきますね。
 
 というわけで、やや唐突ではありますが、この辺りで設定をYAMLで行うように修正しておきましょう。
 
@@ -65,35 +68,55 @@ title: "設定をアトリビュートではなくYAMLで行う"
 を作成して、それぞれ以下の内容にします。（アトリビュートで書いていた内容をYAML形式で書き直しただけです）
 
 ```yaml:config/packages/api_platform/Post.yaml
-App\Entity\Post: ~
+resources:
+  App\Entity\Post: ~
 ```
 
 ```yaml:config/packages/api_platform/Comment.yaml
-App\Entity\Comment:
-  collectionOperations:
-    get: ~
-    post:
-      path: /posts/{id}/comments
-      controller: App\Controller\Comment\CollectionPostController
+resources:
+  App\Entity\Comment:
+    operations:
 
-  itemOperations:
-    get:
-      controller: ApiPlatform\Core\Action\NotFoundAction
-      read: false
-      output: false
-      openapi_context:
-        description: '#hidden'
-    ban:
-      method: put
-      path: /comments/{id}/ban
-      controller: App\Controller\Comment\ItemBanController
-      input: false
+      comments_getCollection:
+        class: ApiPlatform\Metadata\GetCollection
+        provider: App\State\Provider\Comment\GetCollectionProvider
+
+      comments_post:
+        class: ApiPlatform\Metadata\Post
+        uriTemplate: /posts/{postId}/comments
+        uriVariables:
+          postId:
+            fromClass: App\Entity\Post
+            toProperty: post
+        provider: App\State\Provider\Comment\PostProvider
+
+      comments_get:
+        class: ApiPlatform\Metadata\Get
+        controller: ApiPlatform\Action\NotFoundAction
+        read: false
+        output: false
+        openapi:
+          description: '#hidden'
+
+      comments_ban:
+        class: ApiPlatform\Metadata\Put
+        uriTemplate: /comments/{id}/ban
+        controller: App\Controller\Comment\BanController
+        input: false
 ```
+
+この例のように、`ApiPlatform\Metadata\GetCollection` 等のクラス名をそのまま各オペレーション定義のキーにせず、それぞれにキー名を定義する書き方をする場合、このキー名（＝オペレーションの `name`）がそのままルーティング定義のルート名になるため、**アプリ全体で一意な名称をつける必要がある** 点にご注意ください（アトリビュートで書いていたときは `name` プロパティを省略すれば自動で一意な名称がつけられていたので意識する必要がありませんでした）。
+
+なので、上記ではすべてのオペレーション名に `comments_` という接頭辞をつけています。どのような命名規則にするも自由ですが、このように `{リソース名}_{オペレーション名}` といった分かりやすい命名規則を採用しておくと混乱が少ないと思います。
+
+また、`openapiContext` はYAMLにおいては非推奨となっており、代わりに `openapi` を利用するのが正しい手順です。
+
+> ドキュメントでは言及されていませんが、`openapiContext` を利用している状態で実行すると、コンソールに `deprecation notice `12x: Since api-platform/core 3.1: The "openapiContext" option is deprecated, use "openapi" instead.` という警告が出力されるので、そこからうかがい知ることができます。
 
 最後に、`Post` クラス、`Comment` クラスから `#[ApiResource]` アトリビュートを削除すれば、YAMLへの移行は完了です。
 
 ```diff:src/Entity/Post.php
-- use ApiPlatform\Core\Annotation\ApiResource;
+- use ApiPlatform\Metadata\ApiResource;
   use App\Repository\PostRepository;
   use Doctrine\Common\Collections\ArrayCollection;
   use Doctrine\Common\Collections\Collection;
@@ -106,39 +129,47 @@ App\Entity\Comment:
 ```
 
 ```diff:src/Entity/Comment.php
-- use ApiPlatform\Core\Action\NotFoundAction;
-- use ApiPlatform\Core\Annotation\ApiResource;
-- use App\Controller\Comment\CollectionPostController;
-- use App\Controller\Comment\ItemBanController;
+- use ApiPlatform\Action\NotFoundAction;
+- use ApiPlatform\Metadata\ApiResource;
+- use ApiPlatform\Metadata\Get;
+- use ApiPlatform\Metadata\GetCollection;
+- use ApiPlatform\Metadata\Link;
+- use ApiPlatform\Metadata\Put;
+- use App\Controller\Comment\BanController;
   use App\Repository\CommentRepository;
+- use App\State\Provider\Comment\GetCollectionProvider;
+- use App\State\Provider\Comment\PostProvider;
   use Doctrine\ORM\Mapping as ORM;
   use Symfony\Component\Validator\Constraints as Assert;
 
   #[ORM\Entity(repositoryClass: CommentRepository::class)]
-- #[ApiResource(
--     collectionOperations: [
--         'get',
--         'post' => [
--             'path' => '/posts/{id}/comments',
--             'controller' => CollectionPostController::class,
+- #[ApiResource(operations: [
+-     new GetCollection(
+-         provider: GetCollectionProvider::class,
+-     ),
+-     new Get(
+-         controller: NotFoundAction::class,
+-         read: false,
+-         output: false,
+-         openapiContext: [
+-             'description' => '#hidden',
 -         ],
--     ],
--     itemOperations: [
--         'get' => [
--             'controller' => NotFoundAction::class,
--             'read' => false,
--             'output' => false,
--             'openapi_context' => [
--                 'description' => '#hidden',
--             ],
+-     ),
+-     new \ApiPlatform\Metadata\Post(
+-         uriTemplate: '/posts/{postId}/comments',
+-         uriVariables: [
+-             'postId' => new Link(
+-                 fromClass: Post::class,
+-                 toProperty: 'post',
+-             ),
 -         ],
--         'ban' => [
--             'method' => 'put',
--             'path' => '/comments/{id}/ban',
--             'controller' => ItemBanController::class,
--             'input' => false,
--         ],
--     ],
-- )]
+-         provider: PostProvider::class,
+-     ),
+-     new Put(
+-         uriTemplate: '/comments/{id}/ban',
+-         controller: BanController::class,
+-         input: false,
+-     ),
+- ])]
   class Comment
 ```
