--- a/books/a3800fc0912fbb/8.md
+++ b/books/a3800fc0912fbb/8.md
@@ -12,7 +12,7 @@ title: "APIをバージョニングする"
 
 # API Platformにバージョニングのための機能はない
 
-残念ながら、2022年5月現在、API PlatformにはAPIをバージョニングするための機能はありません。
+残念ながら、2023年9月現在、API PlatformにはAPIをバージョニングするための機能はありません。
 
 以下のPRにて、「Cookbookに『APIをバージョニングする機能はないので、プロジェクト自体を分けましょうね』という文言を記載しよう」という提案がなされています。
 
@@ -34,7 +34,7 @@ title: "APIをバージョニングする"
 
 結論としては、エンドポイントごとにURIに `/v1` 等のプレフィクスを手動で付加するしかありません。
 
-先述の [Stack Overflowの投稿](https://stackoverflow.com/questions/59074695/manage-several-versions-of-a-same-route-with-api-platform) では、「エンティティクラスを分けてそれぞれに `routePrefix` を付ける」という方法が提案されていましたが、そうではなく、**すべてのオペレーションについて `path` を手動で定義し、その先頭に手動で `/v1` や `/v2` を付けるようにする、ということです。
+先述の [Stack Overflowの投稿](https://stackoverflow.com/questions/59074695/manage-several-versions-of-a-same-route-with-api-platform) では、「エンティティクラスを分けてそれぞれに `routePrefix` を付ける」という方法が提案されていましたが、そうではなく、**すべてのオペレーションについて `uriTemplate` を手動で定義し、その先頭に手動で `/v1` や `/v2` を付けるようにする**、ということです。
 
 この方法なら、1つのエンティティに対して `v1` 用のオペレーションと `v2` 用のオペレーションを同時に定義できます。
 
@@ -45,72 +45,90 @@ title: "APIをバージョニングする"
 前項で解説した方法は、要するに以下のように定義するということです。
 
 ```yaml:config/packages/api_platform/Post.yaml
-App\Entity\Post:
-  collectionOperations:
-    get:
-      path: /v1/posts
-    post:
-      path: /v1/posts
+resources:
+  App\Entity\Post:
+    operations:
 
-  itemOperations:
-    get:
-      path: /v1/posts/{id}
-    put:
-      path: /v1/posts/{id}
-    patch:
-      path: /v1/posts/{id}
-    delete:
-      path: /v1/posts/{id}
+      posts_getCollection:
+        class: ApiPlatform\Metadata\GetCollection
+        uriTemplate: /v1/posts
+
+      posts_post:
+        class: ApiPlatform\Metadata\Post
+        uriTemplate: /v1/posts
+
+      posts_get:
+        class: ApiPlatform\Metadata\Get
+        uriTemplate: /v1/posts/{id}
+
+      posts_patch:
+        class: ApiPlatform\Metadata\Patch
+        uriTemplate: /v1/posts/{id}
+
+      posts_delete:
+        class: ApiPlatform\Metadata\Delete
+        uriTemplate: /v1/posts/{id}
 ```
 
 ```yaml:config/packages/api_platform/Comment.yaml
-App\Entity\Comment:
-  collectionOperations:
-    get:
-      path: /v1/comments
-    post:
-      path: /v1/posts/{id}/comments
-      controller: App\Controller\Comment\CollectionPostController
+resources:
+  App\Entity\Comment:
+    operations:
 
-  itemOperations:
-    get:
-      controller: ApiPlatform\Core\Action\NotFoundAction
-      read: false
-      output: false
-      openapi_context:
-        description: '#hidden'
-    ban:
-      method: put
-      path: /v1/comments/{id}/ban
-      controller: App\Controller\Comment\ItemBanController
-      input: false
+      comments_getCollection:
+        class: ApiPlatform\Metadata\GetCollection
+        uriTemplate: /v1/comments
+        provider: App\State\Provider\Comment\GetCollectionProvider
+
+      comments_post:
+        class: ApiPlatform\Metadata\Post
+        uriTemplate: /v1/posts/{postId}/comments
+        uriVariables:
+          postId:
+            fromClass: App\Entity\Post
+            toProperty: post
+        provider: App\State\Provider\Comment\PostProvider
+
+      comments_get:
+        class: ApiPlatform\Metadata\Get
+        controller: ApiPlatform\Action\NotFoundAction
+        read: false
+        output: false
+        openapi:
+          description: '#hidden'
+
+      comments_ban:
+        class: ApiPlatform\Metadata\Put
+        uriTemplate: /v1/comments/{id}/ban
+        controller: App\Controller\Comment\BanController
+        input: false
 ```
 
-このようにすべてのオペレーションに `path` を手動で設定すれば、1つのエンティティに対して `v1` 用のオペレーションと `v2` 用のオペレーションを同時に定義できますよね。
+このようにすべてのオペレーションに `uriTemplate` を手動で設定すれば、1つのエンティティに対して `v1` 用のオペレーションと `v2` 用のオペレーションを同時に定義できますよね。
 
-ただ、現状は `v2` 用のオペレーションは存在していないので、今のところはエンティティごとに `routePrefix`（YAMLでは `route_prefix`）を使って一律で `/v1` プレフィクスを付けておくことにしましょう。
+ただ、現状は `v2` 用のオペレーションは存在していないので、今のところはエンティティごとに `routePrefix` を使って一律で `/v1` プレフィクスを付けておくことにしましょう。
 
 もし今後 `v2` 用のオペレーションが登場した場合は上記のような書き方に変えればよいだけです。
 
-YAMLにおける `route_prefix` の設定の仕方は以下のとおりです。
+YAMLにおける `routePrefix` の設定の仕方は以下のとおりです。
 
 ```diff:config/packages/api_platform/Post.yaml
-- App\Entity\Post: ~
-+ App\Entity\Post:
-+   attributes:
-+     route_prefix: /v1
+- resources:
+-   App\Entity\Post: ~
++   App\Entity\Post:
++     routePrefix: /v1
 ```
 
 ```diff:config/packages/api_platform/Comment.yaml
-  App\Entity\Comment:
-+   attributes:
-+     route_prefix: /v1
-+
-    collectionOperations:
-      get: ~
-      post:
-        path: /posts/{id}/comments
-        controller: App\Controller\Comment\CollectionPostController
+  resources:
+    App\Entity\Comment:
++     routePrefix: /v1
+      operations:
+  
+        comments_getCollection:
+          class: ApiPlatform\Metadata\GetCollection
+          uriTemplate: /comments
+          provider: App\State\Provider\Comment\GetCollectionProvider
 
     # ...
 ```
