--- a/books/a3800fc0912fbb/9.md
+++ b/books/a3800fc0912fbb/9.md
@@ -1,8 +1,8 @@
 ---
-title: "Item Put/Collection PostオペレーションのAPI Docからリクエストボディを削除する"
+title: "Post/PutオペレーションのAPI Docからリクエストボディを削除する"
 ---
 
-# Item Put/Collection PostオペレーションのAPI Docには常にリクエストボディが必須として出力されてしまう
+# Post/PutオペレーションのAPI Docには常にリクエストボディが必須として出力されてしまう
 
 先に実装した `PUT /api/v1/comment/{id}/ban` オペレーションですが、`input: false` を設定してリクエストボディをデシリアライズする処理を無効化しました。
 
@@ -16,87 +16,92 @@ API PlatformではItem PutオペレーションおよびCollection Postオペレ
 
 # `OpenApiFactory` をカスタマイズしてリクエストボディを強引に削除する
 
-先に、必須であるItem GetオペレーションをAPI Docから削除するために `OpenApiFactory` を拡張しましたが、ここでもそれと同じ要領で `OpenApiFactory` をカスタマイズしてリクエストボディの項目を削除する必要があります。
+先に、必須であるGetオペレーションをAPI Docから削除するために `OpenApiFactory` を拡張しましたが、ここでもそれと同じ要領で `OpenApiFactory` をカスタマイズしてリクエストボディの項目を削除する必要があります。
 
 具体的には、既に作成済みの `App\ApiPlatform\OpenApiFactory` に以下のようなコードを追加することで対応可能です。
 
 ```diff:src/ApiPlatform/OpenApiFactory.php
   <?php
-
+  
   declare(strict_types=1);
-
+  
   namespace App\ApiPlatform;
-
-  use ApiPlatform\Core\OpenApi\Factory\OpenApiFactoryInterface;
-+ use ApiPlatform\Core\OpenApi\Model\Operation;
-+ use ApiPlatform\Core\OpenApi\Model\Parameter;
-  use ApiPlatform\Core\OpenApi\Model\PathItem;
-  use ApiPlatform\Core\OpenApi\OpenApi;
-
-  class OpenApiFactory implements OpenApiFactoryInterface
+  
+  use ApiPlatform\OpenApi\Factory\OpenApiFactoryInterface;
+  use ApiPlatform\OpenApi\Model\Operation;
+  use ApiPlatform\OpenApi\Model\PathItem;
+  use ApiPlatform\OpenApi\Model\Paths;
+  use ApiPlatform\OpenApi\OpenApi;
+  
+  final class OpenApiFactory implements OpenApiFactoryInterface
   {
-      public function __construct(private OpenApiFactoryInterface $decorated)
-      {
+      public function __construct(private OpenApiFactoryInterface $decorated) {
       }
-
+  
       public function __invoke(array $context = []): OpenApi
       {
           $openApi = $this->decorated->__invoke($context);
-
+  
+          $paths = $openApi->getPaths()->getPaths();
+          $fixedPaths = new Paths();
+  
           /**
            * @var string   $path
            * @var PathItem $pathItem
            */
-          foreach ($openApi->getPaths()->getPaths() as $path => $pathItem) {
-              // hide operations which include "#hidden" in description from API Doc
-              if ($pathItem->getGet() && preg_match('/#hidden/', $pathItem->getGet()->getDescription())) {
-                  $openApi->getPaths()->addPath($path, $pathItem->withGet(null));
-              }
-+
-+             // remove request body in operations witch include "#withoutRequestBody" in description from API Doc
-+             foreach (PathItem::$methods as $method) {
-+                 $getter = 'get'.ucfirst(strtolower($method));
-+                 $setter = 'with'.ucfirst(strtolower($method));
-+                 /** @var Operation|null $operation */
-+                 $operation = $pathItem->$getter();
-+                 if ($operation && preg_match('/#withoutRequestBody/', $operation->getDescription())) {
-+                     // use reflection because $operation->requestBody cannot be reset to null except in the constructor
-+                     $reflectionProperty = new \ReflectionProperty($operation, 'requestBody');
-+                     $reflectionProperty->setAccessible(true);
-+                     $reflectionProperty->setValue($operation, null);
-+                     /** @var Parameter[] $parameters */
-+                     $description = trim(strval(preg_replace('/#withoutRequestBody/', '', $operation->getDescription())));
-+                     $openApi->getPaths()->addPath($path, $pathItem = $pathItem->$setter($operation-  >withDescription($description)));
+          foreach ($paths as $path => $pathItem) {
+              $fixedPathItem = new PathItem();
+  
+              foreach (PathItem::$methods as $method) {
+                  $getter = sprintf('get%s', ucfirst(strtolower($method)));
+                  $setter = sprintf('with%s', ucfirst(strtolower($method)));
+  
+                  $operation = $pathItem->$getter();
+                  assert($operation instanceof Operation || null === $operation);
+  
+                  // hide operations which include "#hidden" in description from API Doc
+                  if ($operation && preg_match('/#hidden/', strval($operation->getDescription()))) {
+                      continue;
+                  }
++ 
++                 // remove request body in operations witch include "#noRequestBody" in description from API Doc
++                 if ($operation && preg_match('/#noRequestBody/', strval($operation->getDescription()))) {
++                     $description = strval(preg_replace('/\s*#noRequestBody\s*/', '', strval($operation->getDescription())));
++                     $operation = $operation->withRequestBody()->withDescription($description);
 +                 }
-+             }
-+         }
-
-          return $openApi;
+  
+                  if ($operation) {
+                      $fixedPathItem = $fixedPathItem->$setter($operation);
+                  }
+              }
+  
+              $fixedPaths->addPath($path, $fixedPathItem);
+          }
+  
+          return $openApi->withPaths($fixedPaths);
       }
   }
 ```
 
-これで、「`openapi_context` の `description` に `"#withoutRequestBody"` という文字列を含むオペレーションについてはAPI Docにリクエストボディを出力しない」という処理を付け加えることができました。
+これで、「`openapiContext` の `description` に `"#noRequestBody"` という文字列を含むオペレーションについてはAPI Docにリクエストボディを出力しない」という処理を付け加えることができました。
 
-> コードの詳細な解説はここでは割愛します。やや長いですが、それほど難解なコードではないので気になる方は読み解いてみてください。
-
-これで準備が整ったので、最後に `Comment` のItem Banオペレーションに `openapi_context` を追記して、`OpenApiFactory` の処理を適用しましょう。
+これで準備が整ったので、最後に `Comment` のBanオペレーションに `openapi` を追記して、`OpenApiFactory` の処理を適用しましょう。
 
 ```diff:config/packages/api_platform/Comment.yaml
-  itemOperations:
+  operations:
 
     # ...
 
-    ban:
-      method: put
-      path: /comments/{id}/ban
-      controller: App\Controller\Comment\ItemBanController
+    comments_ban:
+      class: ApiPlatform\Metadata\Put
+      uriTemplate: /comments/{id}/ban
+      controller: App\Controller\Comment\BanController
       input: false
-+     openapi_context:
-+       description: 'Creates a Comment resource. #withoutRequestBody'
++     openapi:
++       description: 'Creates a Comment resource. #noRequestBody'
 ```
 
-ここでは、デフォルトのdescriptionの文字列に `#withoutRequestBody` を付け加える形にしてあります。こうすることで、実際のAPI Docには `#withoutRequestBody` の部分だけが取り除かれたdescriptionが出力され、元のままの内容を維持できます。（なぜそうなるかは前述の `OpenApiFactory` のコードを読んでみてください）
+ここでは、デフォルトのdescriptionの文字列に `#noRequestBody` を付け加える形にしてあります。こうすることで、実際のAPI Docには `#noRequestBody` の部分だけが取り除かれたdescriptionが出力され、元のままの内容を維持できます。（なぜそうなるかは前述の `OpenApiFactory` のコードを読んでみてください）
 
 これで、下図のとおり `PUT /api/v1/comments/{id}/ban` オペレーションのAPI Docからリクエストボディの項目を削除することができました👍
 
