--- a/books/a3800fc0912fbb/1.md
+++ b/books/a3800fc0912fbb/1.md
@@ -4,18 +4,29 @@ title: "はじめに"
 
 # なぜAPI Platformなのか
 
-[API Platform](https://api-platform.com/) は、2022年5月現在、SymfonyアプリにREST API^[本書では、"REST API" という用語を本来の厳密な意味ではなく "Web API", "JSON API" 程度の意味で用いています。]の機能を実装するためのバンドルとして決定版と言える存在となっています。
+[API Platform](https://api-platform.com/) は、SymfonyアプリにREST API[^1]の機能を実装するためのバンドルとして準公式的な位置付けにあります。
 
-従来は [FOSRestBundle](https://github.com/FriendsOfSymfony/FOSRestBundle) がデファクトスタンダードとして広く使われていましたが、[API Platformの公式ドキュメントにも記載がある](https://api-platform.com/docs/core/migrate-from-fosrestbundle/) ように、2021/09/21にFOSRestBundleのコア開発者たちにより [FOSUserBundleの事実上のEOLを宣言し代替としてAPI Platformを推奨するツイート](https://twitter.com/lsmith/status/1440216817876627459) が投稿されています。
+例えば、API Platformの公式ドキュメントの冒頭には、Symfonyの作者であるFabien Potencier氏による以下のような推薦の言葉が [掲載されています](https://api-platform.com/docs/distribution/)。
 
-また、API Platformはユーザーコミュニティの活動も活発で、2021年9月には [500人規模のオンラインカンファレンスが開催され](https://api-platform.com/con/2021/review/)、今年2022年9月にも [同様にカンファレンスの開催が予定されています](https://api-platform.com/con/2022/)。
+> API Platform is the most advanced API platform, in any framework or language.  
+> （API Platformは、すべてのフレームワークおよび言語において最も先進的なAPIプラットフォームだ。）
+>
+> —Fabien Potencier (creator of Symfony)
 
-しかしながら、現状の筆者の感想として、API Platformは [Simple/Easyの分類](https://twitter.com/t_wada/status/1377147203077111814) で言うとEasyであることを重視しているように思われ、2022年5月現在、ある程度以上複雑なことをしようとすると途端にフレームワークについての深い理解が求められたり、痒いところに手が届かず強引なワークアラウンドが必要になったりするという面があるのも事実です。
+また、同じくFabien氏によって書かれたSymfonyの公式入門書である [Symfony: The Fast Track](https://symfony.com/book) にも、[「API Platformを使ってAPIを公開する」という章](https://symfony.com/doc/6.2/the-fast-track/ja/26-api.html) があり、API Platformの利用が公式に推奨されていることが分かります。
 
-そこで本書では、Symfonyヘビーユーザーである筆者が実際の業務でSymfonyアプリ上でのREST APIの実装にAPI Platformを使ってみた経験をもとに、API Platformの基本的な仕組みやよくあるユースケースで必要になるワークアラウンドについて包括的にご紹介します。API Platformの実戦投入、あるいはその検討の一助になれば幸いです。
+さらに補足しておくと、従来は [FOSRestBundle](https://github.com/FriendsOfSymfony/FOSRestBundle) というバンドルがデファクトスタンダードとして広く使われていましたが、これについても、2021年9月21日にFOSRestBundleのコア開発者たちによって [開発終了を宣言し代替としてAPI Platformを推奨する声明](https://twitter.com/lsmith/status/1440216817876627459) が発せられており、現在ではAPI Platformの公式サイトに [FOSRestBundleからAPI Platformへの移行ガイド](https://api-platform.com/docs/core/migrate-from-fosrestbundle/) も用意されています。
+
+また、API Platformはユーザーコミュニティの活動も活発で、2021年から（本書執筆時点で少なくとも）3年連続で「SymfonyではなくAPI Platform単体をテーマとした」グローバルカンファレンスが開催されており、[2022年の参加者は700人以上に上りました](https://api-platform.com/con/2022/review/)。
+
+しかしながら、現状の筆者の感想として、API Platformは「Simple/Easyの分類」（[参考1](https://twitter.com/t_wada/status/1377147203077111814)、[参考2](https://speakerdeck.com/takeru0757/simple-is-not-easy)）で言うとEasyであることを重視しているように思われ、2023年9月現在、ある程度以上複雑なことをしようとすると途端にフレームワークについての深い理解が求められたり、痒いところに手が届かず強引なワークアラウンドが必要になったりするという面があるのも事実です。
+
+そこで本書では、Symfony・API Platformともにヘビーユーザーである筆者が実際の業務でSymfonyアプリ上でのREST APIの実装にAPI Platformを使ってきた経験をもとに、API Platformの基本的な仕組みやよくあるユースケースで必要になるワークアラウンドについて包括的にご紹介します。API Platformの実戦投入、あるいはその検討の一助になれば幸いです。
 
 # サンプルコード
 
 本書で解説に使用するサンプルコードは、以下のリポジトリにて公開しています。
 https://github.com/ttskch/api-platform-example
 必要に応じて実際のコードを参照しながら読み進めていただければと思います。
+
+[^1]: 本書では、"REST API" という用語を本来の厳密な意味ではなく "Web API", "JSON API" 程度の意味で用いています。
