--- a/books/a3800fc0912fbb/4.md
+++ b/books/a3800fc0912fbb/4.md
@@ -1,5 +1,5 @@
 ---
-title: "Data Provider / コントローラ / Data Persister"
+title: "State Provider / コントローラ / State Processor"
 ---
 
 # リクエストからレスポンスまでのデータの流れ
@@ -10,68 +10,139 @@ title: "Data Provider / コントローラ / Data Persister"
 
 主な要素は
 
-* Data Provider
+* State Provider
 * コントローラ
-* Data Persister
+* State Processor
 
 の3つです。
 
-# Data Provider
+# State Provider
 
-[Data Provider](https://api-platform.com/docs/core/data-providers/) は、リソースの取得処理を担います。
+[State Provider](https://api-platform.com/docs/core/state-providers/) は、リソースの取得処理を担います。
 
-ItemオペレーションにおいてはAPIリソースに対応するクラスのインスタンスを、Collectionオペレーションにおいてはそのようなインスタンスのイテレータ（`iterable`）を返します。
+GetCollection以外のオペレーションにおいてはAPIリソースに対応するクラスのインスタンスを、GetCollectionオペレーションにおいてはそのようなインスタンスのイテレータ（`iterable`）を返します。
 
 デフォルトの実装として
 
-* [`ApiPlatform\Core\Bridge\Doctrine\Orm\CollectionDataProvider`](https://github.com/api-platform/core/blob/v2.6.8/src/Bridge/Doctrine/Orm/CollectionDataProvider.php)
-* [`ApiPlatform\Core\Bridge\Doctrine\Orm\ItemDataProvider`](https://github.com/api-platform/core/blob/v2.6.8/src/Bridge/Doctrine/Orm/ItemDataProvider.php)
+* [`ApiPlatform\Doctrine\Orm\State\CollectionProvider`](https://github.com/api-platform/core/blob/v3.1.18/src/Doctrine/Orm/State/CollectionProvider.php)
+* [`ApiPlatform\Doctrine\Orm\State\ItemProvider`](https://github.com/api-platform/core/blob/v3.1.18/src/Doctrine/Orm/State/ItemProvider.php)
 
 が用意されていますが、リソースやオペレーションごとに独自に定義することも可能です。
 
-Data Providerは、`kernel.request` イベントをlistenしている `ReadListener` というイベントリスナーの内部から [呼び出されます](https://github.com/api-platform/core/blob/v2.6.8/src/EventListener/ReadListener.php#L101-L110)。
+State Providerは、`kernel.request` イベントをlistenしている `ReadListener` というイベントリスナーの内部から [呼び出されます](https://github.com/api-platform/core/blob/v3.1.18/src/Symfony/EventListener/ReadListener.php#L91-L98)。
 
 API Platformには [様々なイベントリスナーが組み込まれており](https://api-platform.com/docs/core/events/)、[オペレーションごとに各種イベントリスナーを有効化/無効化したり](https://api-platform.com/docs/core/events/#:~:text=Some%20of%20these%20built%2Din%20listeners%20can%20be%20enabled/disabled%20by%20setting%20operation%20attributes%3A)、[任意のイベントに対して独自のイベントリスナーを登録して処理をフックしたり](https://api-platform.com/docs/core/events/#custom-event-listeners) することが可能になっています。
 
 例えば、`ReadListener` はデフォルトで有効になっていますが、オペレーションごとに [`read` 属性に `false` をセットすることで無効にする](https://api-platform.com/docs/core/events/#:~:text=Description-,read,Enables%20or%20disables%20ReadListener,-deserialize) ことが可能です。
 
 ```diff:例
-  #[ApiResource(
-      collectionOperations: [
-          'get',
-          'post' => [
-              'path' => '/posts/{id}/comments',
-              'controller' => CollectionPostController::class,
-+             'read' => false,
+  #[ApiResource(operations: [
+      new GetCollection(),
+      new Get(),
+      new Put(),
+      new Delete(),
+      new Patch(),
+      new \ApiPlatform\Metadata\Post(
+          uriTemplate: '/posts/{postId}/comments',
+          uriVariables: [
+              'postId' => new Link(
+                  fromClass: Post::class,
+                  toProperty: 'post',
+              ),
           ],
-      ],
-  )]
++         read: false,
+          controller: PostController::class,
+      ),
+  ])]
+  class Comment
+```
+
+前章で上記のように `read: false,` をセットしていたのは、ReadListerを無効にするためだったというわけです。
+
+なぜReadListenerを無効にする必要があったかというと、説明の都合上 **State Providerを自作する代わりにコントローラを自作して新規リソースの準備を行ったから** です。
+
+**前章で行った対応は、State Providerを使って以下のように書き換えることができます。**
+
+```diff
++ use App\State\Provider\Comment\PostProvider;
+
+  #[ApiResource(operations: [
+      new GetCollection(),
+      new Get(),
+      new Put(),
+      new Delete(),
+      new Patch(),
+      new \ApiPlatform\Metadata\Post(
+          uriTemplate: '/posts/{postId}/comments',
+          uriVariables: [
+              'postId' => new Link(
+                  fromClass: Post::class,
+                  toProperty: 'post',
+              ),
+          ],
+-         read: false,
+-         controller: PostController::class,
++         provider: PostProvider::class,
+      ),
+  ])]
+  class Comment
+```
+
+```php:src/State/Provider/Comment/PostProvider.php
+<?php
+
+declare(strict_types=1);
+
+namespace App\State\Provider\Comment;
+
+use ApiPlatform\Metadata\Operation;
+use ApiPlatform\State\ProviderInterface;
+use App\Entity\Comment;
+use App\Repository\PostRepository;
+
+/**
+ * @implements ProviderInterface<Comment>
+ */
+class PostProvider implements ProviderInterface
+{
+    public function __construct(private PostRepository $postRepository)
+    {
+    }
+
+    public function provide(Operation $operation, array $uriVariables = [], array $context = []): object|array|null
+    {
+        $post = $this->postRepository->find($uriVariables['postId']);
+
+        return (new Comment())->setPost($post);
+    }
+}
 ```
 
 # コントローラ
 
-Data Providerから返された値は、コントローラの `__invoke()` メソッドに `$data` という引数として渡ってきます。
+State Providerから返された値は、コントローラの `__invoke()` メソッドの第1引数に渡ってきます。
 
 コントローラには、取得された値に対して必要な加工を施したり（前章でコメントに投稿を紐づけたように）、リクエスト内容の正しさについてエンティティのバリデーション以上の検証が必要な場合にその検証を行ったりといった処理を書くことになります。
 
 参照系（GETメソッド）の場合は、コントローラが返した値がレスポンスとして返されます。
 
-更新系（GETメソッド以外）の場合は、コントローラが返した値に対してバリデーションが実行され、バリデーションエラーがあればその時点でエラーレスポンスが返され、バリデーションエラーがなければData Persisterに値が渡されます。
+更新系（GETメソッド以外）の場合は、コントローラが返した値に対してバリデーションが実行され、バリデーションエラーがあればその時点でエラーレスポンスが返され、バリデーションエラーがなければState Processorに値が渡されます。
 
 バリデーションは `ValidateListener` というイベントリスナーによって実行されており、`ReadListener` と同様にオペレーションごとに [`validate` 属性によって無効化することが可能](https://api-platform.com/docs/core/events/#:~:text=or%20disables%20DeserializeListener-,validate,Enables%20or%20disables%20ValidateListener,-write) です。
 
-# Data Persister
+# State Processor
 
-[Data Persister](https://api-platform.com/docs/core/data-persisters/) は、更新系のオペレーションにおいてリソースの永続化処理を担います。
+[State Processor](https://api-platform.com/docs/core/state-processors/) は、更新系のオペレーションにおいてリソースの永続化処理を担います。
 
 デフォルトの実装として
 
-* [`ApiPlatform\Core\Bridge\Doctrine\Common\DataPersister`](https://github.com/api-platform/core/blob/v2.6.8/src/Bridge/Doctrine/Common/DataPersister.php)
+* [`ApiPlatform\Doctrine\Common\State\PersistProcessor`](https://github.com/api-platform/core/blob/v3.1.18/src/Doctrine/Common/State/PersistProcessor.php)
+* [`ApiPlatform\Doctrine\Common\State\RemoveProcessor`](https://github.com/api-platform/core/blob/v3.1.18/src/Doctrine/Common/State/RemoveProcessor.php)
 
 が用意されていますが、リソースやオペレーションごとに独自に定義することも可能です。
 
-POSTメソッド、PUTメソッド、PATCHメソッドのオペレーションの場合はData Persisterの `persist($data, array $context = [])` メソッドの `$data` に、DELETEメソッドのオペレーションの場合はData Persisterの `remove($data, array $context = [])` メソッドの `$data` に、それぞれコントローラが返したリソースのインスタンスが渡されます。
+State Processorのの `process(mixed $data, Operation $operation, array $uriVariables = [], array $context = [])` メソッドの `$data` に、コントローラが返したリソースのインスタンスが渡されます。
 
-独自実装する場合は、これを受けて `persit()` メソッドおよび `remove()` メソッド内に適切に永続化処理を書くことになります。
+独自実装する場合は、これを受けて `process()` メソッド内に適切に永続化処理を書くことになります。
 
-Data Persisterは `WriteListener` というイベントリスナーによって実行されており、これもオペレーションごとに [`write` 属性によって無効化することが可能](https://api-platform.com/docs/core/events/#:~:text=or%20disables%20ValidateListener-,write,Enables%20or%20disables%20WriteListener,-serialize) です。
+State Processorは `WriteListener` というイベントリスナーによって実行されており、これもオペレーションごとに [`write` 属性によって無効化することが可能](https://api-platform.com/docs/core/events/#:~:text=or%20disables%20ValidateListener-,write,Enables%20or%20disables%20WriteListener,-serialize) です。
